--- a/localisation/simp_chinese/LFB_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_events_l_simp_chinese.yml
@@ -34,7 +34,6 @@
  COX_BRY.11.t:"身在方寸之地，威震四海之敌"
  COX_BRY.11.d:"随着苏联的轰然倒塌，伟大的俄罗斯自此坠入谷底。她的人民在贫瘠的大地上颠沛流离，这里什么都缺，但唯独一样东西早已堆满了仓库——那便是流传于此地的英雄传说。\n在贝加尔湖冰雪将消的日子，一个远行者踏入了一间湖畔的酒馆。无视了老板鄙夷的神情，他大踏步地迈开沾满泥水的毡靴，跨坐到一张木桌前。消融的积雪带走了大地的热量，他迫切需要一杯伏特加来暖暖身子。\n “你们这边收日元吗？”猛灌了一口伏特加，男人问道。\n话音刚落，酒馆中所有尚且清醒的人一齐看向了这个男人，\n “只收伊尔库兹克卢布。” \n “那东西贬值的这么厉害，你们怎么还在用啊？” \n “因为这里不是符拉迪沃斯托克，也不是萨马拉。”老板坚定地说道，“日本佬的钱在东方和南方是硬通货，但在这儿，除了NKVD的‘友好慰问’，它换不来任何东西。” \n “那……我脚底这双靴子能当酒钱吗？” \n “单是那双破靴子的话，不行，我洗都懒得洗。”老板拿起酒杯，重新斟了满满一杯伏特加，“但如果是它走过的路的话，就还能再值一杯……已经很久没有人从更东边过来了，这一屋子的老酒鬼，都愿意听听我们熟悉的远东已经变成了什么模样。” \n这时，男人身边已经被凑热闹的客人们围了个满满当当，看起来如果他的故事无法令人满意，要交出的就不止是靴子了。男人深吸了一口气——周遭的酒气呛得他直咳嗽——又猛灌了一口伏特加——\n “我来自勘察加，大陆的最东方……”\n “我听说那里不是被日本人占了吗？”“屁，那里现在是美国的一个州吧。”“瞎猜个啥，那里肯定是德国人的补给站，就像我一直在说的，他们的潜艇能够驶过北方的冰盖……”\n “咳咳……”男人猛咳了一声，周遭的七嘴八舌好一会才沉寂了下来，“那里是俄罗斯最后一支海军的驻地——我敢肯定。因为我就是从那里出发的。太平洋舰队的水兵们控制了港口与城市，民兵们设置了岗哨，控制了整个半岛。他们甚至还有一艘战列舰——十月革命号，我曾经就在上面光荣的服役。尤马舍夫——一位苏联时代的海军上将，指挥着现存的太平洋舰队和整个勘察加……”\n “那么你又是为什么离开呢？” \n “……唉。”男人叹了口气，将酒一饮而尽，“一位暮气沉沉的船长，指挥着一堆老掉牙的破船，游弋在破碎国家的海岸线上。我感到自己就躺在棺材里，只不过因为埋我的守墓人也死了，所以还能够呼吸……海上咸湿冰冷的海风，不比这里好上多少。” \n或许有朝一日，那里将成为新生俄罗斯国家海军的基石，又或者，十月革命号的炮响将震颤整个世界，水兵们的勇气，又将点燃俄罗斯的激情——"
  COX_BRY.11.a:"但现在，男人只想讨点酒喝。"
- #COX_BRY.11.b:"勘察加舰队相关内容，请游玩《威震四海》！"
 
  #人民革命委员会内容
  PRC.2000.t:"寒春中的会晤"
@@ -107,14 +106,14 @@
  COX.2.a:"快速拿下迪化是吧，完全明白了！"
  COX.3.t:"解放新疆！"
  COX.3.a:"“虽然反响平平，但总算迈出了坚实的第一步。”"
- COX.3.d:"在红军出乎预料的快速进攻下，长期盘踞新疆的盛世才部只得宣布缴械投降。久别故乡的中国旅指战员们终于完成了解放故国的第一步。\n但也只是最简单的一步而已。\n在盛世才入主迪化的数十年间，他从来没有建立对整个新疆的实际控制。政令很少能传达到迪化城外，各地的少数民族并不欢迎这个东北来的“新疆王”，巴依老爷们仍旧经营着自己的一个个小王国，对所谓盛世才将军的权威嗤之以鼻。而他统治失败的证据就是如今立在迪化城内，却鲜有人收听的广播站。\n对于一个只想偏安一隅的军阀而言，新疆的现状虽不算好，也还过得下去，但对于想要将其作为解放全国基地的中国旅而言，这样的状况必须被改变。新疆的人民必须被组织起来，打碎束缚他们的锁链，掀翻一直骑在他们头上的压迫者。而这一切，将从这里开始——\n站在广播站前，毛岸英这样想到：\n不知道萨布林发出那次著名的广播时，是否和此刻的自己有着同样的心情？\n广播员将麦克风递到了他的面前，他深吸了一口气——\n “请注意！请注意！迪化城在广播！迪化城在广播！现在，将通过无线电播送重要消息！我们，信仰共产主义的中国旅，已经击败了军阀盛世才。\n…… \n我们承诺将民主，自由与社会主义带给这片土地和她辛勤的人民！” \n这份广播稿，先后用汉语，俄语，蒙古语以及维吾尔语播送了一遍。"
+ COX.3.d:"在红军出乎预料的快速进攻下，长期盘踞新疆的盛世才部只得宣布缴械投降。久别故乡的中国旅指战员们终于完成了解放故国的第一步。\n但也只是最简单的一步而已。\n在盛世才入主迪化的数十年间，他从来没有建立对整个新疆的实际控制。政令很少能传达到迪化城外，各地的少数民族并不欢迎这个东北来的“新疆王”，巴依老爷们仍旧经营着自己的一个个小王国，对所谓盛世才将军的权威嗤之以鼻。而他统治失败的证据就是如今立在迪化城内，却鲜有人收听的广播站。\n对于一个只想偏安一隅的军阀而言，新疆的现状虽不算好，也还过得下去，但对于想要将其作为解放全国基地的中国旅而言，这样的状况必须被改变。新疆的人民必须被组织起来，打碎束缚他们的锁链，掀翻一直骑在他们头上的压迫者。而这一切，将从这里开始——\n站在广播站前，毛岸英这样想到：\n不知道萨布林发出那次著名的广播时，是否和此刻的自己有着同样的心情？\n广播员将麦克风递到了他的面前，他深吸了一口气——\n “请注意！请注意！迪化城在广播！迪化城在广播！现在，将通过无线电播送重要消息！我们，信仰共产主义的中国旅，已经击败了军阀盛世才。\n\n……\n\n我们承诺将民主，自由与社会主义带给这片土地和她辛勤的人民！” \n这份广播稿，先后用汉语，俄语，蒙古语以及维吾尔语播送了一遍。"
  COX.4.t:"会师"
- COX.4.d:"因为我们数十门火炮突如其来的轰击下，原先在蒙疆边境上驻扎的盛世才部队士气瞬间清零，而已经和我们有过联系的游击队战士们在我们对盛世才边境部队轰击之后快速行动，很快就击溃了盛世才驻扎在此的部队，两支红军部队胜利在阿勒泰会师，会师后，起义军迅速和八十八旅交接，昔日中国共产党的老同志们和毛岸英成立了新疆苏区临时中央政府，控制了在阿勒泰地区，起义军战士们和八十八旅随时准备南征迪化。"
+ COX.4.d:"在我们数十门火炮突如其来的轰击下，原先在蒙疆边境上驻扎的盛世才部队士气瞬间清零，而已经和我们有过联系的游击队战士们在我们对盛世才边境部队轰击之后快速行动，很快就击溃了盛世才驻扎在此的部队，两支红军部队胜利在阿勒泰会师，会师后，起义军迅速和八十八旅交接，昔日中国共产党的老同志们和毛岸英成立了新疆苏区临时中央政府，控制了在阿勒泰地区，起义军战士们和八十八旅随时准备南征迪化。"
  COX.4.a:"前进！"
  COX.6.t:"迪化一夜"
  COX.6.d:"又是繁忙的一天。自新疆革命成功后，毛岸英就由一位小小的旅长，转变成了全新疆的主席。当然，职位的晋升并不意味着好事；南疆暴动、土地问题以及混乱的边界，各种各样的事务无时无刻不在困扰着这位年轻的主席。正当毛岸英伏案处理事务时，一道刺眼的光芒突然从窗外闪过。这时他想到："
- COX.6.a:"或许我应该看看这是什么样的光芒"
- COX.6.b:"也许只是又一次打雷，还是继续工作吧"
+ COX.6.a:"或许我应该看看这是什么样的光芒？"
+ COX.6.b:"也许只是又一次打雷，还是继续工作吧。"
  COX.7.t:"月度报告"
  COX.7.d:"致苏维埃中央：\n我们在上一个月的工作中取得了一些成绩，但是总体而言，做得还是不够好。我们的政策不够连贯，推行政策的空窗期让反革命分子得到了可乘之机——他们散布谣言，声称苏维埃的革命势头已经到此为止了，地主老爷们很快就会重新掌握乡村地区的秩序。虽然我们的战士们已经尽了最大的努力来驳斥这种胡言乱语，但还是无法避免局部恐慌的发生。如果我们并不打算向农奴地主作出妥协，就有必要加快我们的进度了。"
  COX.7.a:"但愿我们在下个月能做得更好。"
@@ -331,7 +330,7 @@
  COX.84.d:"这天清晨，老广正如往常一样起床、洗漱、吃早饭：要赶在开工前检查一遍机器的状况。自从他在光复新疆的战斗中负伤后，党组织安排他去一个五金厂上班。抗日前他在陕西也是在五金厂工作，还被评过优秀机组成员，所以虽然腿部受了伤，但是在新的工厂里也还算是顺风顺水。\n不过，今天再次踏进工厂时，他停了下来。\n停在门前的几辆卡车明显是苏式的，而车上插的旗子则表明了它们来自布里亚特红军。看着这些车，老广想起了那段在贝加尔湖旁与布里亚特红军战士并肩作战的日子。\n不过，为什么他们的车子在这里？\n疑惑的老广缓慢的踱着步子，走近了卡车。车中空无一物；旁边的俄罗斯人正在用俄语和厂长交谈。他们在说什么？老广听不懂。于是他只好收敛起好奇心，向着工厂内加快步伐走去：小伙子们正等着他来帮忙呢。\n当他跨进工厂大门，映入他眼中的则是大惊喜：多了几台陌生的车床。而在此之前，就厂里那些用两只手就能数得过来的玩意，即使是他也觉得枯燥无味。他走上前去，用手拍了拍轴箱，饶有兴趣的看着这些泛着古旧绿色的东西。诚然，这些家伙和厂中其他的东西一样有了时日；但老广知道，有些经历了时间洗礼的东西依旧可靠……"
  COX.84.a:"并终将在新的土地上放射出耀眼的光。"
  COX.85.t:"水利局成立"
- COX.85.d:"由于地理和历史原因，在新疆过去的时代，政府就有专门的水利部门负责管理全疆水利。但不知为何，本该权势滔天的原水利局办公室，只剩下一个破旧的水利局办公室还表示这个机关曾经存在。\n老革命家陈潭秋对工作环境并不挑剔，只见他匆匆走入办公室内，打开了桌子上老旧的新疆地图，陈潭秋被满满飞舞的灰尘弄得咳嗽了两声。\n担心老革命身体的护卫们连忙上去想要扶他，被陈潭秋制止了：“小问题，不用急。”\n随后他就投入与观察这副新疆水利设施图。“据《新疆图志·沟洫志》记载，至光绪末年，新疆地区共有干渠944条，支渠2333条，灌溉面积达1100多万亩。”他默念了曾经看到过的图书的内容，一点一点的比对的这图上的内容。\n“左宗棠修的防洪工程全被标记上了年久失修……林则徐修的阿齐乌苏渠被好几个大地主瓜分？通惠渠被地主瓜分为好几段，水已经干了……”陈潭秋检查了一些比较知名的渠，看的他头痛不已。随后又看了一些前水利局成员留下的日志：“民国四十五年乌力买力斯坎儿井年久失修，无修坎儿井其术，不可修，以至于败……民国五十年年图木斯克大水，溺死者十余人，良田数百亩……五十一年科克肉玛大旱，庄稼无活，百姓旱死数十”许久，陈潭秋缓缓放下卷宗。哑然一笑，说道：
+ COX.85.d:"由于地理和历史原因，在新疆过去的时代，政府就有专门的水利部门负责管理全疆水利。但不知为何，本该权势滔天的原水利局办公室，只剩下一个破旧的水利局办公室还表示这个机关曾经存在。\n老革命家陈潭秋对工作环境并不挑剔，只见他匆匆走入办公室内，打开了桌子上老旧的新疆地图，陈潭秋被满满飞舞的灰尘弄得咳嗽了两声。\n担心老革命身体的护卫们连忙上去想要扶他，被陈潭秋制止了：“小问题，不用急。”\n随后他就投入与观察这副新疆水利设施图。“据《新疆图志·沟洫志》记载，至光绪末年，新疆地区共有干渠944条，支渠2333条，灌溉面积达1100多万亩。”他默念了曾经看到过的图书的内容，一点一点的比对的这图上的内容。\n“左宗棠修的防洪工程全被标记上了年久失修……林则徐修的阿齐乌苏渠被好几个大地主瓜分？通惠渠被地主瓜分为好几段，水已经干了……”陈潭秋检查了一些比较知名的渠，看的他头痛不已。随后又看了一些前水利局成员留下的日志：“民国四十五年乌力买力斯坎儿井年久失修，无修坎儿井其术，不可修，以至于败……民国五十年年图木斯克大水，溺死者十余人，良田数百亩……五十一年科克肉玛大旱，庄稼无活，百姓旱死数十”\n许久，陈潭秋缓缓放下卷宗。哑然一笑，说道："
  COX.85.a:"“任重而道远啊。”"
  COX.90.t:"民政之事"
  COX.90.d:"毛岸英希望迪化中央苏维埃能快些接手全疆的政务，却总是忍不住去多插手那么几下，但他也知道，若是自己一直插手的话，那么中央苏维埃的威信就立不起来的，成堆的公文还是会发到自己这儿，对一些恶俗的事情还要自己亲自去处理。\n现如今在新疆，主席的命令才是军民都会服从的铁令，中央苏维埃的命令就像小细娘一样，不那么受人尊重。\n尤其是许多地方农会的中国旅老兵和干部，一和中央苏维埃的人闹了不愉快，就耍起自己的小性子来，伸出自己的大手说：“你算个什么鸡巴？岸英主席握过我这只手，拍过我这肩膀，勉励我好好做工作！”\n而中央苏维埃的大家也变得有些捉摸不透了，他们现在很少再和岸英争论政务，而是默默地执行，出了问题后再说自己自是执行主席的命令。\n这些问题都是毛岸英在行军打仗中不曾见过的，指挥军队作战，无论胜负都找不到推诿的地方，总能找到负责的军事主官。\n但到了民事行政这里，却因为主席令这种权宜之计，和中央苏维埃的命令发生了些冲突，早在阿勒泰一地的时候，毛岸英尚且能总览全局，但有了一整个新疆苏区后，毛岸英根本管不过来了，所以中央苏维埃的行政机关只能扩大。\n现在苏区仅仅坐拥一个新疆，就已经乱象频出…等未来收复了西北后又会怎样呢？\n这东西，毛岸英想着就头疼，老同志陈潭秋则鼓励岸英应该做出些什么改变，以改变现在的状况。\n但岸英对此毫无头绪。
@@ -357,13 +356,13 @@
  COX.97.t:"扩展党支部"
  COX.97.d:"这天的赵指导员很头疼。\n“没想到之前只是个战士，怎么会被派来收拾他们。”他低头一边打理着绑腿一边自言自语道。他的面前背对着他，军装参差不齐的人群，是盛世才时期遗留下来的士兵，从他们不间断的窃窃私语和不安的肢体动作可以看出，这些士兵也把毛岸英当做了下一个盛世才，正在谋划着如何最轻松地获得下一份军饷。\n想到这里，赵指导员感到肩上的责任重大，他将烦恼和顾虑暂时抛到脑后，别好了胸上的党章，径直向人群面前走去。\n赵指导员把步伐放的很慢，因为他还在思量着如何对这些旧式军队思想仍未抛弃的士兵们宣传社会主义思想，让他们真正融入红军战士的大家庭。\n他联想到毛岸英父亲著名的三湾改编--那次具有伟大创新性的军事决策;也是促使他自己作为一个学生投笔从戎，为广大士兵宣传马克思主义的事件。他心想，毛泽东能够说服上千起义的泥腿子正式为党服务，我赵指导员也能够将这百来号人成功收编。\n想到这里，赵指导员已不知不觉来到士兵们的跟前。未等他发话，半数的士兵已悉数起立：“长官好！”另半部分的士兵则是继续盘腿坐在原地，狡黠地打量着起立的人群和赵指导员。\n他略感尴尬，显然士兵们也把他当做了军阀的爪牙，他清了清嗓子:“同志们，请不要紧张，都坐下吧。我们不是旧军阀，我是代表红军来和你们沟通的，”他担心被个别士兵嘘声打断，便紧接着说到:“我们欢迎各位加入红军的大家庭，如果有人不愿意加入，我们也不强求，我给你们带了盘缠。”\n几个瘦弱的士兵颤抖着站起:“长官，俺们要回家。”\n“不用叫我长官，叫我赵指导员就好，这是你们的路费，回去要照顾好家人。”赵指导员走到几人面前轻声道。\n众人意识到眼前这位军容整肃的方面汉子也许并不像以往那个严酷的瘦脸长官般可怕，几个活泼开朗的士兵首先开口与赵指导员攀谈起来，赵指导员早已放下架子，一一回答着士兵们的疑惑。\n简易的校场上讨论的声音愈发响亮，赵指导员笑了，显然今天的成果出乎他的意料，从与一众士兵的讨论中，他逐渐意识到，这些跟随盛世才驻扎新疆的士兵对本地的风土人情和军事形势的熟悉程度是他们中国旅不可比拟的。"
  COX.97.a:"红军确确实实在成长。"
- COX.98.t:"逃亡"
+ COX.98.t:"逃亡（其一）"
  COX.98.d:"惨白的即将西落的月光下，几只被枪声惊醒的乌鸦绕着干枯而死的树木，发出凄厉的报丧声，给凌晨的天增添了死亡的气息。\n它们血色的眼珠中，隐约看到几个佝偻的身影无力的走着。\n“人是跑不赢马的……”一个人捂着因为受伤而不断流血的伤口，说道。他旁边的人目光中有着浓浓的疲惫感，但仍强撑着，回应道：“快到了，不要怕。”\n“他们已经追上来了！而我已经中枪了！我想不明白！为什么追我们这些矿工这么狠!”他无力的摆了摆另外一只手。\n似乎是为了印证他的话，寂静的黑暗中，传来了隐隐约约奔腾的马蹄声。\n“他们不会追太狠的,你们沿着这个方向走，我把他们引到另外一个方向去。”说罢，领头的人从怀中抽出了一把老旧的苏制莫辛纳甘。\n“老艾孜买提，你……”流亡队伍中的另外几个人见状，有些语塞。\n“快走，没时间了。”老艾孜买提提醒道\n受伤的人也停下了脚步，说道：“我就不必了，我已经受伤了，只会暴露行踪，老艾孜买提，我就留下来陪你吧。“艾尔克？”\n其他人还想说些什么，被艾尔克驱走了。\n就这么短短一段时间，远方的马蹄声已经越来越清晰。\n“这里离新疆不远……他们应该能平安到新疆，那时候，他们应该能活得不一样吧………”艾尔克跟着老艾孜买提走到了一处掩体后，喃喃自语道：“自由……”\n老艾孜买提观望了马家军骑兵来的方向，抽出一把小刀，说道：“只有这个了。到时候你加油吧。”\n之后，就是一阵漫长的沉默，如死一样的寂静的夜里，只有远方的马蹄声和近处的呼吸声清晰可闻。\n马蹄声愈来愈近，呼吸声也愈发沉重。\n“砰！”\n随着一道枪声响起，似乎是带动了交响乐般，远方紧接着传来了一阵又一阵枪声。\n追来的数名马家军骑兵应声倒地。\n老艾孜买提和艾尔克看了看枪声传来的方向。\n远方太阳缓缓升起，橘黄色的光驱散了夜的死寂。"
  COX.98.a:"一展红旗在光下灿灿生辉。"
  COX.99.t:"拖拉机"
  COX.99.d:"纬度越北，晴天和黑夜的时间就越发漫长。夏季的迪化，天黑不过五个小时，白昼就匆匆降临了。这里的天总是湛蓝的，悠闲地挂着一片片云朵。\n被整理过的街道显得十分干净，老工人看着面前一个像是施工车的红色机械，像是在看自己的孩子。机械充满着美感，崭新的红油漆附着在散发着淡淡光辉的金属外壳之上。盖子下头安放着一个全新的发动机，老人知道，只要注入燃料，这钢铁铸就的冰冷心脏也将如人类一般炙热地搏动。黑色的座舱是刚刚安放的，一排操纵杆摆放在伸手就能够到的位置。虽然现在整个西北，乃至整个中国都少有能驾驶这台机械的技工，但他们已经迈出了史无前例的一步——这些天来厂里大家的努力并没有白费，闭上眼睛，无数迪化漫长的白昼黑夜仿佛就在昨日，汗水和希望，还有同志情谊，令这辆俄罗斯血统的拖拉机最终在迪化降生。\n而最下头一动不动的履带，让老人想起了久远的往事——那天，父亲正准备着秋收，自己跟在后面，清风拂过麦浪，但他只感到太阳火辣辣的晒。而后，侵略者的坦克碾过麦田，发出可怕的轰鸣声，短促的枪声响起，走在前面的父亲突然倒下了……\n这台机器是厂里所有工人的孩子——老人想到。它勤劳的父母们不希望自己的孩子再制造出更多悲剧。它今后将会投入轰轰烈烈地大生产中，它搏动着的心脏将服务于人类战天斗地的事业，而钢铁铸造的身躯将重新支起这个苦难民族的脊梁。\n他充满老茧的手小心翼翼地摩挲着他的孩子，这台拖拉机旁的金属铭牌上在光的照耀下，有些反光。\n这些光映入他的眼睛，在他的瞳孔中反射出一堆英文字母。"
  COX.99.a:"КПСС ＆ CCP"
- COX.100.t:"逃亡"
+ COX.100.t:"逃亡（其二）"
  COX.100.d:"秀英受不了了。\n因为前几年那场该死战争，她那本就不安稳的，但还算过的下去的生活彻底毁了。\n兵荒马乱，兵荒马乱，兵荒马乱。\n在日本来之前，她的男人就已经本来就隔三差五的被喊去“操练”，每次都是去给官爷们免费干苦劳役，地里的活计便是三天打鱼两天晒网，都只有她一个人在营生结果这仗一打，她男人便顺水成章被征召去了军队。村里现在除了小孩，男丁已经绝迹了。本来一个人种地也能将就着过，但这好死不死地处在战线附近的无名小村庄三天两头挨炸，秀英一家人都活着——可地算是彻底坏了。\n前几天，老母亲突然生了急病，可没人看——村里的土郎中早去军营了，老母亲就嚎着叫着走完了她坎坷的一生，昨天，她男人的尸体也送回来了。\n“秀英啊，你男人还算好的了，留了个全尸，我听说有的娃子被打的呀，浑身上下没一块好肉……”邻家的阿姨见着他男人的尸体，感慨道。\n秀英没听进去邻家老阿妈的絮叨，只是一会怔怔地望着她男人的尸体，一会看看她三个还没10岁的孩子。“老滚嗯（丈夫），你没了，俺们咋过啊……”  一句话从她嘴里蹦出来。她又愣怔起来，地没了，没活路了；母亲没了，男人也没了，这地方没什么好待的了，干脆跑吧，可是，往哪里跑？\n“咋就俺们这兵荒马乱的呀……听说新疆那边变了天，来了群什么红军……听说好多人都往那跑……”\n秀英这下可把邻家阿妈的絮叨听进去了，新疆？新疆！那里总不打仗吧！成，就往那跑！\n第二天一早，秀英悄悄把门阖上，背着3岁的幺女和不多的行囊，左手牵一个右手牵一个，踏上了逃亡的道路。"
  COX.100.a:"目的地：新疆。"
  COX.101.t:"新疆，新家"
@@ -414,12 +413,12 @@
  COX.123.t:"荒野大镖客：冒险"
  COX.123.d:"蒙疆南部的戈壁是世界上最荒凉的地区之一，有诗曰：“大漠连天一片沙，苍茫何处觅人家。\n除了一些牧民，很少有外人会踏足这片地区。\n然而就在这危险的地方，几个红军战士骑着马和马车正在行进，他们已经走了很长的路，而前方依然有很长的路要走。\n路途漫漫，几个红军战士开始闲聊起来。\n“班长，我真的不信那些内地军阀能找着地方。”\n“可不么，我跟你说，他们估计连枪都不知道怎么拿。”\n“别瞎聊了，毛主席说了，战略上轻视敌人，战术上要重视敌人。”\n刘班长一边喝止了部下的闲聊，一边打开了地图。\n拜这恶劣的自然环境所赐，蒙疆南部人口稀疏，又因为人革委与日本的大战，本来稀疏的人口更是跑的没几个了。\n这也是为什么，苏区打算和晋系的部队在这里交易军火。\n刘班长也能猜到中央的意图，如果单单为了几条破枪，中央绝对不会让战士们冒着生命危险来到蒙疆。更重要的是，能不能借此机会获得内地的军事情报，甚至是争取一部分军队起义。\n想到这，刘班长不禁高声喊了起来：“驾！驾！同志们，咱还得再快点！”\n另外一边，李班长现在其实挺害怕的。\n这不是李班长第一次倒卖军火，李班长给马家军卖过，给高宗武卖过。但是跑到蒙疆来卖，倒是第一次。\n“哥，咱这也忒冒险了，这要是让日本人发现了，不得把咱…”\n“你听过一句老俗语吗？叫撑死胆大的，饿死胆小的，上面的军饷就给这么点，咱得自己想办法！”\n李班长用两只手把他的部下拎了起来，一双溢满杀意的眼睛狠狠地盯着他！\n“你不想当穷光蛋吧，想想你埋头种地的爹娘！想想你老婆！”\n“大哥，大哥，你看西边！”\n李班长向西边望去，扬起的烟尘和夕阳构成了一道美丽的图画。\n与这样的美景一同出现的，还有马蹄声。\n随着尘埃散去，这几个晋绥军的士兵终于看清了他们的买家是什么人。\n“这…不可能啊，我还以为你们早就死光了！”\n只见带头的军官，帽子上赫然缝着一颗红星。\n“李先生！久仰大名了！”那个带头的军官说着做了一个拱拳的手势。\n拱手啊！这可是中国人的礼仪！\n“不敢不敢，长官抬举了。”\n“闲话不多说了，让我们看看货吧。”\n“长官您看，这都是全新的日本枪。”\n“嗯，都是好枪。”\n那个军官拿起一把枪细细端详，正如晋绥军的人所说，崭新的日本突击步枪。\n“李先生，这些枪，是从哪里来的？”\n“刚从西北方面军运输队拿的，妥妥的新品。”\n“那好吧，这些黄金你们可以拿走了。”"
  COX.123.a:"“如果还有要求，我们会通过牧民联系你的。”"
- COX.124.t:"有钱能使“马”推磨"
+ COX.124.t:"有钱能使“马”推磨。"
  COX.124.d:" 李二花了三天时间走完他所在的小城周围的村庄。\n“娘嘞……”目睹完马家军的剥削，破败的村庄，恍如骷髅般的活人。李二嘴里只蹦出来这一句呻吟，他连着这三天都没睡安稳。\n明天就是交报告的日子了，想到这小城还没调查过，他决定今天就不出去看那些渗人的光景了，花一天时间来把这小城“调查”一番。\n换了身在这城里足够普通，实际上里已经是破旧不堪的衣服，李二开始在这小城晃荡起来。小城虽然也是一副萧条景象，但好歹不算破败，李二走在这起码不会做噩梦。\n“兄弟，来包卷烟。”\n店主眼皮都没抬一下，扔包粗糙的烟过来，上面写着“湟中卷烟厂”，然后店主说了一个高的让人咋舌的数字。“娘嘞，咋这贵啊？你宰我呢！”“宰？都这个价！你上别处问去！绝对没宰你！”店主依然是眼皮都不抬一下。\n李二四处问了问，还真是！怎这贵啊？一包烂卷烟赶得上五斤肉了！无奈，他灰溜溜的走了。\n第二天晚上，到了宵禁时分，李二在约定地点把报告交给接头人，偷偷趁黑摸回去，一双大手突然拍上了他的肩头，李二回头一看，一个胖乎乎的马家军！“军……军爷……”李二腿登时就软了，“我……我……”完犊子，这次得进去了。\n“违反宵禁条例，跟我回公所去，接受讯问！”马家军大声吼到，手上却没有动作，一双大手仍死死摁在李二肩上，眼神却流露出一种……渴望？\n李二顿时心领神会（废话，这事俺以前又不是没干过），手伸进裤包，拿出一叠钞票，堆着笑脸双手呈给那个马家军。马家军马上笑开了花，“不错，算懂规矩，”他扯过钞票，“还有，新来的吧？以后办事，就找兄弟，不过票子得备足！”转头走了。留下李二愣在那里。\n李二脑子迅速转动起来，好！有门路！这下任务好执行多了！\n他走回联络处，拿出一个皮箱子，往里面堆了些钞票，然后出门，向公所走去。"
  COX.124.a:"有钱什么都好办。"
  COX.125.t:"一次特训"
  COX.125.d:"胡必定正骑着马前往伪蒙一边防哨站，此次他的任务是伪装成一名伪蒙哨兵，并对西北方面军进行侦查，打探其下一步的行动。\n出发之前，组长语重心长的告诉他千万不能掉以轻心，但他并没有太多在意，都是黄种人，都挺像的，再说蒙语他也学的不错，不会露陷的。\n于是他挥了挥手说知道了，然后就头也不回地骑上马走了。\n不过胡必定毕竟还是个新手，第一次执行任务还是有点紧张。尽管西北方面军里的鬼子不会无聊到去侦查一个兰州大战后荒废的伪蒙疆哨站，但说不定呢？说不定鬼子在西宁大战之后又加强了警戒呢？胡必定想着，攥紧了拳头。\n黄昏时分，走了一整天的他终于抵达了哨站。他把马拴在外面，环顾四周。在确定没人后走进这小小的哨站，他靠墙坐下来想休息一会儿。\n接着顺手拿起了放在桌子上的水，下意识的就喝了一口。\n他也不知道自己是怎么睡着的，醒来之后就发现自己被绑了。“该死！”胡必定暗暗自骂，“我怎么就这么没一点警戒意识！”\n这时哨站的门突然被打开，一个身着特高科制服的人走了进来。胡必定闭上眼，做好了赴死的决心，但那人却蹲下来摘下了帽子，撕掉了假胡子。\n“胡必定同志，看来这次考核你不及格了。”组长笑着对他说。"
- COX.125.a:"“下次注意点，人生不是考核”"
+ COX.125.a:"“下次注意点，人生不是考核。”"
  COX.126.t:"西宁之战胜利！"
  COX.126.d:"火光，冲天的火光\n这便是坦克兵佐藤贯太郎死前最后看到的\n这火光对他来说象征着毁灭，但是对西宁来说，火焰则是象征着重生。\n西宁城内的大街上，几个市民看着被击毁的坦克渍渍称奇。\n“这一仗打的还真漂亮。”\n“谁说不是呢？”\n“这么大的铁疙瘩，一炮就给打趴下了。”\n突然，几个巡逻的红军战士发现了他们\n“老乡，这里不安全，日本人随时可能反攻，大家还是快回家去吧。”\n“小同志，你们打的真漂亮！二十多年了，可算让日本人吃了点苦头！”\n“老乡，你都给我说的不好意思了。”\n“以后，是不是还要打到兰州，打到西安去啊？”\n“老乡，我们以后不仅要打到西安，我们还要解放全中国呢！”\n“唉呦呦，你这个小同志，年纪不大，口气倒是不小啊…”\n指挥部内，毛岸英正在对着地图思索。\n“陈叔，日本人已经被我们完全打退了。”\n“嗯，短时间内，已经无力再发起攻击。”\n陈赓又说：“这一战，敌人出兵急促，缺少计划，之前又被马家所消耗，能赢不算意外。”\n说完这句话，陈赓又对着毛岸英点了点头，说：“但是你这一仗确实打的好啊，看来，我这个老头子，可以退休了。”\n“陈叔，这次胜利，是我军上上下下全部战士和指战员创造的，少了一个都不行。”\n说完，两人哈哈大笑，指挥所弥漫在欢乐的气氛中。\n就在此时，电台兵悄悄拿着一份刚刚译出的电文，递到了毛岸英的手里。\n致红军\n这里是国民革命军，这里是国民革命军，我部近日听闻你部于西宁血战日寇，我蒋经国部带领的国民革命军所部三千七百二十一人，愿为国而战，共击日寇!\n如若同意，烦请前往西宁城正南六公里处共商国事。\n“陈叔，您怎么想？咱们去还是不去？”"
  COX.126.a:"“兄弟阋于墙，外御其侮。”"
