--- a/localisation/simp_chinese/replace/COX_state_names_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/COX_state_names_l_simp_chinese.yml
@@ -4,6 +4,10 @@
  STATE_616: "银川"
  STATE_617: "迪化"
  STATE_619: "喀什"
+ STATE_585: "纳沃伊"
+ STATE_586: "费尔干纳"
+ STATE_742: "杜尚别"
+ STATE_750: "中卡拉卡尔帕克"
  STATE_957: "哈密"
  STATE_958: "巴音郭楞"
  STATE_618: "昌吉地区"
@@ -23,3 +27,15 @@
  STATE_2024: "塔克拉玛干"
  STATE_2025: "河西"
  STATE_2026: "伊犁河谷西段"
+ STATE_2027: "比什凯克"
+ STATE_2028: "贾拉拉巴德"
+ STATE_2029: "奥什"
+ STATE_2030: "巴特肯"
+ STATE_2031: "锡尔河"
+ STATE_2032: "粟特"
+ STATE_2033: "苏儿汗河"
+ STATE_2034: "西卡拉卡尔帕克"
+ STATE_2035: "布哈拉"
+ STATE_2036: "花剌子模"
+ STATE_2037: "北卡拉卡尔帕克"
+ STATE_2038: "南拉卡尔帕克"
