--- a/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
@@ -39,12 +39,12 @@
   XBJ_Liu_Shaoqi_desc: "在最低谷处为革命找寻生机，在最绝望的时候为全民族觅得希望，这便是刘少奇坚持至今的，属于共产党人的“党性”。他将自己的青春献给了大革命，将热血挥洒在抗日的战场，而他憔悴的晚年，则为了党的存续穷尽了一切——当战败已经注定之时，党不得不放弃了延安根据地，展开了前往西南的新长征，刘少奇自愿留在延安，维系共产党残破的地下党组织。\n\n陕北的斗争一日比一日艰苦，日军扫荡的压力与日俱增，他们的身前匍匐着汉奸党羽，他们手中拎着禁锢群众的锁链，党越来越无法在陕北辗转腾挪……在最危险的几个年份，党被分割包围在黄河两岸。为了保存火种，刘少奇只能率领残破的党向西北撤退……\n\n共产党的西行相当顺利，在顺利通过了山西与青海的军阀控制区之后，刘少奇幸运地在新疆找到了党组织。尽管盛世才政府愿意给共产党提供一席之地，但刘少奇很清楚军阀们首鼠两端的做派，所以当不可避免的背叛到来时，共产党已经做足了准备，最大程度地减少了损失。\n\n刘少奇经历过党最黑暗的时光，竭尽全力地拯救了危难中的党，这在他性格中留下了不可磨灭的印记。比起积极地发动群众，他更相信缜密的谋划与情报的运用，尽管采用更加实用主义的立场，但没有人能怀疑他对革命的忠诚。"
   Peng_Dehuai: "彭德怀"
   Ma_Dunjing: "马惇靖"
-  XBJ_Ma_Dunjing_hog_desc: "§Y政府首脑§!\n§Y军阀§!\n------------\n§L做派首鼠两端，立场摇摆不定——任何在乱世中割据一方的军阀都不约而同地总结出了这相同的生存哲学。得益于此，军阀们在某种程度上建立了形形色色的，还算稳定的政权。\n半个世纪悄然逝去，中华大地乱局如故，所以正如世界上的其他政权一样，他们也需要合格的接班人。军阀们通常会将自己相中的直系后代或家族中有前途的年轻人们早早地安插在部队中，给他们“参谋”，“师长”之类的职务，教导着这些人军阀的生存之道。\n马惇靖，便是这些年轻人中的佼佼者。\n他自幼熟读诗书，从小便懂得阿拉伯文，能根据大人的意思解经。在他父亲马鸿宾的部队中。他步步高升，从营职升到了团，旅，师......不到30岁，他就当上了81军的参谋长。在旁人看来，他不过是凭着父亲的权柄扶摇直上——虽然马惇靖屡次与众人争辩，但他的父亲却不避讳这一点——西北的冲突本就不似中原般激烈，在父亲的计划中，自己的儿子们将在剿匪与小规模冲突中积累功勋与经验，等到成熟之时，他就可以光荣卸任，把防务交予值得信赖的儿子们.......\n但事与愿违，日本帝国对中国的全面入侵击碎了无数军阀可悲的地区主义幻想，无数年轻人被抗日的热情所感召，而敏锐的军阀们则从统一战线的建立中嗅到了剧变降临的前兆。尽管心中所想并不相同，但马惇靖和马鸿宾——这对父子仍一道踏上了抗日的战场。\n在绥西的残酷战争中，马惇靖目睹了无数敌寇的暴行，也深受无数壮烈牺牲的晋绥人民的感召。战火令他迅速成长为一名经验丰富的将领，一位高唱爱国歌曲的领袖，却越发偏离一个合格军阀的道路。他的心中早已充满了全国人民同仇敌忾的气魄，中华民族应当生死与共，“偏安一隅以求自保”从来不是一个现实的选项。\n当时的他不会料想得到，即便汇聚了全民族的力量也无法确保战争的胜利。他更想不到的是，有朝一日，战火也会烧到自己的故乡。如今西北的人民每时每刻都承受着与当日绥西相比有过之而无不及的暴行。为了自己亲爱的故乡，马惇靖愿意献出一切，以求早日将日寇驱逐。§!"
+  XBJ_Ma_Dunjing_hog_desc: "§Y政府首脑§!\n§Y军阀§!\n------------\n§做派首鼠两端，立场摇摆不定——任何在乱世中割据一方的军阀都不约而同地总结出了这相同的生存哲学。得益于此，军阀们在某种程度上建立了形形色色的，还算稳定的政权。\n半个世纪悄然逝去，中华大地乱局如故，所以正如世界上的其他政权一样，他们也需要合格的接班人。军阀们通常会将自己相中的直系后代或家族中有前途的年轻人们早早地安插在部队中，给他们“参谋”，“师长”之类的职务，教导着这些人军阀的生存之道。\n马惇靖，便是这些年轻人中的佼佼者。\n他自幼熟读诗书，从小便懂得阿拉伯文，能根据大人的意思解经。在他父亲马鸿宾的部队中。他步步高升，从营职升到了团，旅，师......不到30岁，他就当上了81军的参谋长。在旁人看来，他不过是凭着父亲的权柄扶摇直上——虽然马惇靖屡次与众人争辩，但他的父亲却不避讳这一点——西北的冲突本就不似中原般激烈，在父亲的计划中，自己的儿子们将在剿匪与小规模冲突中积累功勋与经验，等到成熟之时，他就可以光荣卸任，把防务交予值得信赖的儿子们.......\n但事与愿违，日本帝国对中国的全面入侵击碎了无数军阀可悲的地区主义幻想，无数年轻人被抗日的热情所感召，而敏锐的军阀们则从统一战线的建立中嗅到了剧变降临的前兆。尽管心中所想并不相同，但马惇靖和马鸿宾——这对父子仍一道踏上了抗日的战场。\n在绥西的残酷战争中，马惇靖目睹了无数敌寇的暴行，也深受无数壮烈牺牲的晋绥人民的感召。战火令他迅速成长为一名经验丰富的将领，一位高唱爱国歌曲的领袖，却越发偏离一个合格军阀的道路。他的心中早已充满了全国人民同仇敌忾的气魄，中华民族应当生死与共，“偏安一隅以求自保”从来不是一个现实的选项。\n当时的他不会料想得到，即便汇聚了全民族的力量也无法确保战争的胜利。他更想不到的是，有朝一日，战火也会烧到自己的故乡。如今西北的人民每时每刻都承受着与当日绥西相比有过之而无不及的暴行。为了自己亲爱的故乡，马惇靖愿意献出一切，以求早日将日寇驱逐。L§!"
   COX_Ma_Dunjing_sec_desc: "§Y安全部长§!\n§Y军阀§!\n------------\n§L做派首鼠两端，立场摇摆不定——任何在乱世中割据一方的军阀都不约而同地总结出了这相同的生存哲学。得益于此，军阀们在某种程度上建立了形形色色的，还算稳定的政权。\n半个世纪悄然逝去，中华大地乱局如故，所以正如世界上的其他政权一样，他们也需要合格的接班人。军阀们通常会将自己相中的直系后代或家族中有前途的年轻人们早早地安插在部队中，给他们“参谋”，“师长”之类的职务，教导着这些人军阀的生存之道。\n马惇靖，便是这些年轻人中的佼佼者。\n他自幼熟读诗书，从小便懂得阿拉伯文，能根据大人的意思解经。在他父亲马鸿宾的部队中。他步步高升，从营职升到了团，旅，师......不到30岁，他就当上了81军的参谋长。在旁人看来，他不过是凭着父亲的权柄扶摇直上——虽然马惇靖屡次与众人争辩，但他的父亲却不避讳这一点——西北的冲突本就不似中原般激烈，在父亲的计划中，自己的儿子们将在剿匪与小规模冲突中积累功勋与经验，等到成熟之时，他就可以光荣卸任，把防务交予值得信赖的儿子们.......\n但事与愿违，日本帝国对中国的全面入侵击碎了无数军阀可悲的地区主义幻想，无数年轻人被抗日的热情所感召，而敏锐的军阀们则从统一战线的建立中嗅到了剧变降临的前兆。尽管心中所想并不相同，但马惇靖和马鸿宾——这对父子仍一道踏上了抗日的战场。\n在绥西的残酷战争中，马惇靖目睹了无数敌寇的暴行，也深受无数壮烈牺牲的晋绥人民的感召。战火令他迅速成长为一名经验丰富的将领，一位高唱爱国歌曲的领袖，却越发偏离一个合格军阀的道路。他的心中早已充满了全国人民同仇敌忾的气魄，中华民族应当生死与共，“偏安一隅以求自保”从来不是一个现实的选项。\n当时的他不会料想得到，即便汇聚了全民族的力量也无法确保战争的胜利。他更想不到的是，有朝一日，战火也会烧到自己的故乡。如今西北的人民每时每刻都承受着与当日绥西相比有过之而无不及的暴行。为了自己亲爱的故乡，马惇靖愿意献出一切，以求早日将日寇驱逐。§!"
   Bo_Yibo: "薄一波"
   XBJ_Bo_Yibo_sec_desc: "§Y安全部长§!\n§Y布尔什维主义§!\n------------\n§L薄书存，1908年2月6日出生于山西省定襄县蒋村。如同他许许多多的同龄人一样，他在青春时正值大革命的高潮，他从中看到了民族的未来，自觉地汇入其中。\n1925年标志着他与旧社会的彻底决裂——声援太原人民的抗税运动，响应五卅爱国运动......作为山西进步青年的急先锋，当年秋天，他就加入了中国共产主义青年团，同年12月转为中国共产党党员......但本该为整个民族带来光明前途的大革命却最终毁于国民党反动派之手，整个三十年代间，他三度入狱，一度被判处死刑，直到1936年，才被党营救出来。\n获救后的薄一波被派往山西，总揽党在山西省的工作，抗战爆发后，又挑起了组建新军“山西青年抗日决死队”的担子。在白区长期工作的经验使他悉知国民党反动派的秉性——当阎锡山趁着1939年反共高潮对新军发难时，早有准备的薄一波很快便粉碎了他的阴谋。\n抗战失败后，山西抗日决死队正处于山陕边境的危险地带，当他们终于退到了敌人控制较为薄弱的陕北地区时，党中央已经撤往了西南。陕北深厚的群众基础促使薄一波决定在这里重建革命根据地。\n抗日决死队的游击战争一直持续到50年代民国政府下定决心剿灭陕西的叛乱。红军缺乏武器与人员的补充，无法抗衡装备日械的“政府军”。他们有的化整为零，以更小的单位在陕北继续战斗，也有的选择撤往西北，沿着祁连山，穿过沙漠，抵达新疆。\n虽然年事已高，但薄一波仍精神矍铄，时间未能蹉跎他抗敌的斗志，反倒将他的游击战术磨砺得炉火纯青。§!"
   Li_Xiannian: "李先念"
-  XBJ_Li_Xiannian_for_desc: "§Y外交部长§!\n§Y毛泽东思想§!\n------------\n§L李先念,1909年出生于湖北省黄安县。\n1936年11月，受党中央之命，他作为西路军军政委员会委员，率领一支部队进军马家领地，试图建立河西根据地，以打通前往新疆的道路，与共产国际建立联系。西征的过程并不顺利，不熟悉地形的红军遭到了马家军顽强的反击，屡次有全军覆没的风险。但在战士们的英勇奋战，以及李先念的灵活指挥下，三十军先是强行突破黄河天险，又先后在凉州和永昌之间同敌军恶战，歼敌4000余人。\n西征虽没有如预想般开辟河西根据地，却打开了前往新疆的通路。1937年，李先念率西征军余部翻越祁连山分水岭，先是在冰峰雪岭中行军20多天，又穿越荒无人烟的大漠戈壁，于4月底到达甘肃、新疆交界处的星星峡，这一批部队，成为了后来共产党新疆局的骨干力量。\n1938年，随着抗日战争愈发激烈，李先念回到了陕北，当日军的铁蹄踏入重庆时，他并没有随党中央一道前往西南，而是率领着一支偏师，坚持在已沦陷的陕甘宁地区进行游击斗争。50年代初，随着国民政府发起了旨在歼灭陕北抵抗的围剿作战，李先念只好率部再次前往新疆。如果上一次旅程是长征，那么这一次真称得上是大溃败了。\n幸好，在祖国的西北边陲，还有人可以为这位转战了大半个中国的老革命者接风洗尘——在战后的数十年间，中共新疆支部在盛世才政府取得了一定的发展。战后的和平时光，转眼便到了1962年，李先念做梦也没有想到，全国革命的又一次火种，会在新疆引燃。当第八十八旅奇迹般地接管了迪化后，这位老革命又一次跨上了骏马，拿起了驳壳枪。\n在西北危机中，虽然已年过半百，但李先念还是自告奋勇，冲锋在前。面对疮痍满目的青宁大地，他锁紧眉目，终日思虑着如何驱散笼罩在西北人民头顶的阴霾——那§R如虎狼般凶悍的日本军队。§!§!"
+  XBJ_Li_Xiannian_for_desc: "§Y外交部长§!\n§Y毛泽东思想§!\n------------\n§L李先念,1909年出生于湖北省黄安县。\n1936年11月，受党中央之命，他作为西路军军政委员会委员，率领一支部队进军马家领地，试图建立河西根据地，以打通前往新疆的道路，与共产国际建立联系。西征的过程并不顺利，不熟悉地形的红军遭到了马家军顽强的反击，屡次有全军覆没的风险。但在战士们的英勇奋战，以及李先念的灵活指挥下，三十军先是强行突破黄河天险，又先后在凉州和永昌之间同敌军恶战，歼敌4000余人。\n西征虽没有如预想般开辟河西根据地，却打开了前往新疆的通路。1937年，李先念率西征军余部翻越祁连山分水岭，先是在冰峰雪岭中行军20多天，又穿越荒无人烟的大漠戈壁，于4月底到达甘肃、新疆交界处的星星峡，这一批部队，成为了后来共产党新疆局的骨干力量。\n1938年，随着抗日战争愈发激烈，李先念回到了陕北，当日军的铁蹄踏入重庆时，他并没有随党中央一道前往西南，而是率领着一支偏师，坚持在已沦陷的陕甘宁地区进行游击斗争。50年代初，随着国民政府发起了旨在歼灭陕北抵抗的围剿作战，李先念只好率部再次前往新疆。如果上一次旅程是长征，那么这一次真称得上是大溃败了。\n幸好，在祖国的西北边陲，还有人可以为这位转战了大半个中国的老革命者接风洗尘——在战后的数十年间，中共新疆支部在盛世才政府取得了一定的发展。战后的和平时光，转眼便到了1962年，李先念做梦也没有想到，全国革命的又一次火种，会在新疆引燃。当第八十八旅奇迹般地接管了迪化后，这位老革命又一次跨上了骏马，拿起了驳壳枪。\n在西北危机中，虽然已年过半百，但李先念还是自告奋勇，冲锋在前。面对疮痍满目的青宁大地，他锁紧眉目，终日思虑着如何驱散笼罩在西北人民头顶的阴霾——那§R如虎狼版凶悍的日本军队。§!§!"
   Chen_Yun: "陈云"
   XBJ_Chen_Yun_eco_desc: "§Y经济部长§!\n§Y布尔什维主义§!\n------------\n§L陈云，1905年6月13日出生于贫苦农民家庭。2岁丧父，4岁丧母，由舅父拉扯长大。他的童年生活充斥着贫困与拮据，悲惨的现实促使他早早找寻着中国的未来。1925年，他参加五卅运动。同年8月，任商务印书馆发行所罢工委员会委员长，参加领导商务印书馆大罢工。这些运动无一例外都以反动派的血腥镇压而告终。陈云——这位年轻的中国工人举目四望，却发现自己早已深陷囹圄，争取解放的路荆棘密布，究竟要洒下多少人的鲜血方可将其开辟？\n后来，经人介绍，他加入了一个同样年轻的党派——中国共产党。\n为了中国革命的未来，党四处辗转，陈云便追随着党，游历了大半个中国。直到1937年，他来到迪化，任中共中央驻新疆代表。彼时的西北革命局势扑朔迷离——西路军虽未能成功建立河西革命根据地，但还是为新疆党支部送来了及时的援助。而当时的新疆王盛世才正奉行着“亲苏亲共”的政策，党甚至被允许在新疆的城市中公开活动，如此看来，党在新疆的发展前景辉煌——\n于是他请示中央，决定留在新疆。凭借自己的能力，他当上了盛世才政权的经济顾问，在这边陲之地，十年如一日地细心栽培着党的势力。一晃便是二十年时光。这期间，新疆的工人群体间广泛地接受了马克思主义，但自从与苏联的贸易路线断绝之后，新疆的工业就停止了增长的势头；二十年间，盛世才越来越难以容忍共产党人的活动，开始逐步压缩党辗转腾挪的空间。党在新疆的生存愈发举步维艰，但本地无产阶级的力量早已萎缩，不足以支持一场广泛的革命，而除了在五十年代时陆续抵达的陕北溃兵外，便再也没有支援的消息了.......不再年轻的革命者目睹着这绝望的形势，选择俯下身去，继续耕耘......\n但转机的降临总是出乎所有人的预料，新疆的解放终于给了他大展拳脚的机会。半辈子生活在西北的陈云，对于此地小农经济的运转模式了如指掌，也悉知各地的风土人情。为了来之不易的西北解放区，为了党和工人阶级最终的胜利，老革命者不惜再度只身涉险.......§!"
 #建设兵团
@@ -58,13 +58,20 @@
   Li_Da: "李达"
 
 #东突
+  UZB_START: "夏拉夫·拉希多维奇·拉希多夫"
+  TAJ_START: "拉苏诺维奇·贾布尔·拉苏诺夫"
+  TAJ_START1: "图尔达昆·乌苏巴利耶夫"
+  KRK_START1: "阿梅特·沙穆拉托夫"
+  TRK_START: "巴利什·奥维佐维奇·奥维佐夫"
+  KRK_START: "谢苗·瓦夏金"
+  KYR_START: "图尔达昆·乌苏巴利耶夫"
+
+
+
+#中亚
   Elihan_Tore: "艾力汗·吐烈"
-  Muhammad_Amin: "穆罕默德伊敏"
-  Isa_Yusuf_Alptekin: "艾沙·玉素甫·阿布甫泰肯"
-  Douglas_Mackiernan: "道格拉斯·麦基尔南"
+
+
 #马家军
   QIN_Ma_Bufang: "马步芳"
   POLITICS_MA_BUFANG_DESC: "有人说，西北马家共尊真主，故得长幼和睦，尊卑有序；西北人民唯奉安拉，故得战乱鲜少，生活富足。但此刻坐在王座上的马步芳十分清楚，抛去真主圣言的粉饰，西北诸军阀的本质与中原并无不同，都是披着人皮的野兽。\n出卖国家，背叛人民，甚至背叛自己的至亲——就连马步芳自己，都伙同南京政府，与马步荣一道逼迫其父马麟将权柄交出，才得以执掌青海。但马家确实胜于中原军阀的一点是——每当大敌当前，信众们便会爆发出惊人的团结，无论分歧几何，他们也大体上服从领导者的决定，自清末以来便一贯于此。\n无论面对的是共产党还是国民党，是汉人还是日寇，马步芳都小心地把控着西北的航向。觉察日军不愿劳师远征青海，马步芳便明智地保存实力，将重庆的电报每每搁置一旁。待到战局明朗之际，他果断改换阵营，令西北赶上了战后经济复苏的快车，开创了“塞上江南”的繁荣神话。\n时过境迁，但马步芳的统治仍稳如泰山，放眼四方，日资仍争抢着涌入，而南京政府也无力对西北自治做出干涉。就连西藏的喇嘛，也自觉避开马家军的锋芒。但伟大的“西北王”如今已步入其暮年，多年来放荡奢靡的生活拖垮了他的身子，好在曾环绕膝下的孩子们已经长成，终有一日，他们必将从自己手中接过这雄厚的遗产，无论早晚....无论用什么手段....."
-#蒙古
- MEN_batedaoerji: "巴特·道尔吉"
- MEN_zedengbaer: "尤木佳·泽登巴尔"
