同步中亚内容实装

--- a/localisation/simp_chinese/replace/COX_state_names_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/COX_state_names_l_simp_chinese.yml
@@ -15,8 +15,7 @@
 
 #86-94
 #16-24
- STATE_732: "伊塞克湖"
- STATE_1466: "苦盏"
+
  STATE_2016: "阿克苏"
  STATE_2017: "库尔勒"
  STATE_2018: "克拉玛依"
@@ -34,7 +33,7 @@
  STATE_2030: "巴特肯"
  STATE_2031: "锡尔河"
  STATE_2032: "粟特"
- STATE_2033: "苏儿汗河"
+ STATE_2033: "苏尔汗河"
  STATE_2034: "西卡拉卡尔帕克"
  STATE_2035: "布哈拉"
  STATE_2036: "花剌子模"
