把一个浮窗的黑色文字效果改成了灰色

--- a/localisation/simp_chinese/LFB_DDS_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_DDS_l_simp_chinese.yml
@@ -103,7 +103,7 @@
  LFB_DDS.1.t:"红与黑"
  LFB_DDS.1.d:"“所以您的意思是，这伙土匪战斗力和组织性高得不正常？”政治保卫处地方工作部主任秦同辉向一旁陪同的地方民兵干部问道。\n“是啊，我们上星期和他们第一次交手时就注意到了。这帮混账的枪法不比我们差，牺牲了好几个同志才勉强把他们打退，他们甚至还会在撤退的时候交替掩护射击。昨天夜里我们突袭了他们的据点，也只抓到了一个舌头，审了一宿也没出啥结果。”\n“他是不开口吗？还真是够死硬的……”\n“不不不，他老早就开口了。”民兵干部慌慌张张的打断了他。“问题是，我们这没一个人能听懂他说的啥。村里的老毛拉之前去了一趟，但也只能听出来这家伙说的是阿拉伯语，毕竟他也上了年纪了。”\n秦同辉还没来得及往下思考，临时关押用的土坯房就出现在了他面前。二人开锁进去，就看到屋里的破椅子上五花大绑了一个人，鼻梁高得吓人，胡子更是厚得看不见嘴。尽管浑身上下没有什么伤痕和血迹，他的脸却如同死人般铁青，好像一宿没睡。\n秦同辉大步走到他面前，紧紧扯住了他的衣领，尽力在脑海中搜索自己年轻时在苏联学的阿拉伯语：“liman taemala”，意思大概是“你为谁工作”吧，他心里也没底儿。\n那人的神色明显一怔，随后又平静而疲惫地吐出了两个词，好像弹琴的人终于找到了一头懂得欣赏音乐的牛：“hizb al-tahrir……”\n“我没记错的话，hizb是党的意思吧？”民兵干部若有所思，一道寒光闪过了他的思绪，让他不自觉地与秦同辉四目相对。\n “事态严重了，我得把这件事上报给中央。这段时间麻烦你们看管好他。”"
  LFB_DDS.1.a:"一个敌对政党渗透进来了……但是从哪来的呢？"
- LFB_DDS_hizb_tahrir_discover_tooltip:"一个新的威胁正高举§b黑旗§!从遥远之地袭来，威胁着新生的§e红色政权§!。§R欲想拔树，必先寻根。§!"
+ LFB_DDS_hizb_tahrir_discover_tooltip:"一个新的威胁正高举§g黑旗§!从遥远之地袭来，威胁着新生的§e红色政权§!。§R欲想拔树，必先寻根。§!"
  
  LFB_DDS.2.t:"合围"
  LFB_DDS.2.d:"“努尔沙吾提，咱俩干这事是不是不太好？这已经算是阿富汗国境内了……”年轻的边防民兵有些忐忑地走进边境哨所的室内，好像自己犯了什么大错。\n“你总是这副德行。放心吧你，我早就观察过了，阿富汗人至少半年前就把这地方给扔了。再说外面这雪大的都能把人淹了，你还想怎么回去？只要咱俩能活着全须全尾儿的见着指战员，他就不带把咱咋样的，原则性和灵活性相结合嘛。”\n见自己的战友一声不吭地坐在原地，努尔沙吾提也没再聊骚，但一刻闲不下来的他又把目光放到了角落里的一沓旧报纸上。\n“这帮家伙还挺孝顺，给咱留了点解闷的东西。就是不知道上头有没有性感女孩儿啊，听说那个什么沙阿挺包容这方面的，一个封建君主搞起资本主义的堕落玩意儿来了……”努尔沙吾提饶有兴致地翻阅着，虽然他看不懂上头写的达里语和普什图语，但有总比没有强。\n在哪个瞬间，努尔沙吾提感觉自己在之前的某页报纸上看到了什么东西，一些令他感到刺眼却熟悉的东西。某种好奇心驱使着他往前一张张翻找回去。也许他只是出了幻觉，也许那只是某个阿富汗艺术家的讽刺画，他试图这样说服自己。但最终的结果却把他定在了原地。\n“咋不继续往下看了，被性感姑娘迷住魂儿了？一旁的战友终于也按耐不住凑了上来，之后也立刻陷入了沉默。”\n插图上画着一面竖立在阿富汗国土上的巨大旭日旗，散发出的光芒覆盖了中亚、伊朗、印度和西北的每一寸土地，仿佛是在昭示帝国的铁蹄即将对它们展开征服。"
