--- a/localisation/simp_chinese/replace/TNO_Karakalpak_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/TNO_Karakalpak_l_simp_chinese.yml
@@ -26,8 +26,8 @@
  KRK_wolves_at_the_door_desc: "Karakalpakstan's troubles do not end with its hostile relationship with Uzbekistan, nor is it the least of its worries on a day to day basis for the average rural family on the outskirts of Karakalpakstan. Every week, there is a growing list of stories of the Russian and Kazakh bandits, sweeping into local towns and villages and plundering them for all they're worth, cutting down all those who stand in their way.\n\nWith murderers like these roaming our borders, countermeasures have proven absolutely necessary, taking the shape of a proper militia system spanning the nation. If these warlords hope to take a slice of Karakalpakstan, they will bleed for it, and our army exists only to ensure this fate."
  KRK_young_army: "缺乏经验的军队"
  KRK_young_army_desc: "While Karakalpakstan has organized its military well to deal with bandits and warlords, there is no amount of preparations, planning, or effective command structuring that can make up for the inherent flaws in an army with a poor state of mind. Nowhere in Central Asia is this more prevalent than with the army of Karakalpakstan. Born from the local militias spanning the nation's borders, the army consists largely of young, passionate, inexperienced soldiers who think of fighting bandits as a breeze, whether or not they've actually faced conflict or shot their weapon in a combat scenario.\n\nAs a result of this mindset, each and every trial of combat faced by Karakalpakstan's army is one fought with bravery and stupidity. If we hope to maintain our security, we will need to remedy this issue in short order."
- KRK: "卡拉卡尔帕克斯坦人民共和国"
- KRK_DEF: "卡拉卡尔帕克斯坦人民共和国"
+ KRK: "卡拉卡尔帕克斯坦共和国"
+ KRK_DEF: "卡拉卡尔帕克斯坦共和国"
  KRK_ADJ: "卡拉卡尔帕克"
  KRK_United_Socialist: "卡拉卡尔帕克斯坦统一阵线"
  KRK_United_Socialist_DEF: "卡拉卡尔帕克阵线"
