--- a/localisation/simp_chinese/replace/TNO_Kyrgyzstan_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/TNO_Kyrgyzstan_l_simp_chinese.yml
@@ -25,8 +25,8 @@
  KYR_Kalima_Amankulova: "卡利玛·阿曼库洛娃"
  KYR_Abdukadyr_Urazbekov: "阿卜杜卡迪尔·乌拉兹别科夫"
  KYR_Andrei_Grebnev: "安德烈·格列布涅夫"
- KYR: "吉尔吉斯苏维埃社会主义共和国"
- KYR_DEF: "吉尔吉斯苏维埃社会主义共和国"
+ KYR: "吉尔吉斯民主社会主义共和国"
+ KYR_DEF: "吉尔吉斯民主社会主义共和国"
  KYR_ADJ: "吉尔吉斯"
  KYR_Talas: "塔拉斯伊斯兰国"
  KYR_Talas_DEF: "塔拉斯伊斯兰国"
