--- a/localisation/simp_chinese/replace/TNO_Uzbekistan_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/TNO_Uzbekistan_l_simp_chinese.yml
@@ -29,11 +29,11 @@
  UZB_Jadid_desc: "十月革命爆发后，贾迪德思想便在乌兹别克斯坦迅速传播。很多早期革命者均强烈认同并倡导这一思想。布哈林政权的崩溃彻底显露社会主义的失败，贾迪德主义的另一面也逐渐显现。在西式民主制度下，人们逐渐从西方的启蒙运动中受到启发，憧憬着一个开明的伊斯兰时代。\n\n对更美好未来的承诺，以及乌兹别克斯坦坚实的群众基础，使贾迪德思想已成为乌兹别克斯坦文化中一股不可忽视的力量，它对艺术、文学甚至是时尚均产生了不小影响。然而，这些对美好未来的承诺，有朝一日能否得以实现？恐怕我们也不得而知。"
  UZB_Rise_of_Discontent: "日益增长的不满"
  UZB_Rise_of_Discontent_desc: "贾迪德思想在乌兹别克人的生活中有着很大影响力。但接受这一思想的民众心中还存有疑惑。这一意识形态曾是苏联时期民众生活的一部分，但现在不仅苏联崩溃，就连西俄革命阵线也垮台了，中亚地区陷入一片荒凉。有些人看着现实的悲惨现状，声称贾迪德主义不过通过操纵伊斯兰教来获得权力。于是，人们对这一思想的信心逐渐开始动摇。\n\n这些说法是否属实，还有待观察，但如果属实，这将给现任政府带来灭顶之灾，乌兹别克斯坦的稳定肯定会因此受到影响。"
- UZB: "乌兹别克斯坦共和国"
- UZB_DEF: "乌兹别克斯坦共和国"
+ UZB: "乌兹别克斯坦"
+ UZB_DEF: "乌兹别克斯坦"
  UZB_ADJ: "乌兹别克"
- UZB_communist: "乌兹别克斯坦人民共和国"
- UZB_communist_DEF: "乌兹别克斯坦人民共和国"
+ UZB_communist: "乌兹别克人民共和国"
+ UZB_communist_DEF: "乌兹别克人民共和国"
  UZB_VictoriousCommie: "布哈拉人民苏维埃共和国"
  UZB_VictoriousCommie_DEF: "布哈拉人民苏维埃共和国"
  UZB_VictoriousCommie_ADJ: "布哈拉"
