--- a/localisation/simp_chinese/LFB_DDS_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_DDS_l_simp_chinese.yml
@@ -1,5 +1,15 @@
 ﻿l_simp_chinese:
+ #文化#
+ var_nationality.2000:"乌兹别克，俄族技术移民人口占比明显"
+ var_nationality.2001:"乌兹别克，塔吉克少数民族人口占比明显"
+ var_nationality.2002:"吉尔吉斯，俄族技术移民人口占比明显"
+ var_nationality.2003:"吉尔吉斯，乌兹别克和塔吉克少数民族占比明显"
 
+#人物介绍#
+ UTL_Mustafa_Shokay:"穆斯塔法·绍凯"
+ UTL_Mustafa_Shokay_desc:"1890年，穆斯塔法·绍凯出生在哈萨克草原上的一个富庶且地位卓著的贵族家庭。流淌着克烈与扎尼别克血脉的他自幼就展现出了惊人的天赋，后来又前往圣彼得堡法学院继续深造。穆斯塔法·绍凯的未来似乎注定如同草原上空的耀日般，明亮而灼目。然而，随着萨拉热窝的一声枪响，一切都幻灭了。沙皇政府很快就在内忧外困中倒台，红色浪潮扫过了双头鹰旗帜下的每一寸土地，包括他的家乡。当时他正与同僚们共同商讨着突厥斯坦的自治，为中亚人民谋取决定自己命运的权力，但回应他的只有布尔什维克的刺刀与铅弹。穆斯塔法·绍凯由此踏上了流亡的旅程，几经辗转后在巴黎安定下来，这一走就是二十年。\n\n1941年，纳粹帝国的战争机器席卷东欧，所有出生在苏联领土上的知名侨民都遭到了占领军的逮捕，绍凯也不例外。但短短几个星期后，纳粹就提出希望由他领导“突厥斯坦军团”——一支由侨民和战俘组成的辅助部队，为争取突厥斯坦的自由而对抗苏联。在东方事务部长阿尔弗雷德·罗森贝格的引荐下，绍凯披上了黑色军服，带领军团见证了红色巨人的毁灭，但德国人并没有履行他们的承诺。自那以后的每天每夜，军团的战士们都忙于镇压匪徒和游击队，只有战斗的间隙才能坐在阿斯特拉罕的河滩上，遥望国境线另一侧的广阔草原。\n\n十年后，事情又一次迎来了转机。西俄罗斯革命阵线发动了背水的一战，突厥斯坦军团再次投入进了对抗布尔什维克的战斗中。但在某个大雪纷飞的夜晚，瑟缩在前线指挥部中的军团士兵们忽然发现，一支戴着手榴弹臂章的党卫军部队向自己发动了攻击。穆斯塔法·绍凯嗅到了危险的气息，他知道德国人终于要对自己下手了。突厥斯坦军团迅速脱离了战斗序列，一路跋涉穿越混乱的高加索，来到了里海沿岸的伊朗境内。但沙阿不愿破坏与德国盟友的关系，于是把军团打包装进了火车，运向东方的阿富汗。在那里，穆斯塔法·绍凯得到了一个机会，一个期望已久的返回故土的机会。\n\n这就是穆斯塔法·绍凯用来减轻自己负罪感的说辞。所有人都知道“突厥斯坦军团”不过是一群受过训练的土匪，他自己也不过是个懦弱的投机家，但绍凯本人对此毫不理会。但在某间门窗紧闭的办公室里，桌上那张插满军团旗帜的中亚地图早已浸透了泪渍。"
+ Turkestan_freedom_fighter:"突厥斯坦的老斗士"
+ 
  #国家精神#
 
  #土库曼国家精神#
