--- a/localisation/simp_chinese/LFB_DDS_VP_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_DDS_VP_l_simp_chinese.yml
@@ -11,4 +11,10 @@
  VICTORY_POINTS_12465:0 "希瓦"
  VICTORY_POINTS_1623:0 "纳沃伊"
  VICTORY_POINTS_1459:0 "古利斯坦"
- 
+ VICTORY_POINTS_13269: "努库斯"
+ VICTORY_POINTS_7706: "伏龙芝"
+ VICTORY_POINTS_12218: "库尔干秋别"
+ VICTORY_POINTS_7224: "库洛布"
+ VICTORY_POINTS_4629: "吉扎克"
+ VICTORY_POINTS_1384: "布哈林纳巴德"
+ VICTORY_POINTS_10671: "沙赫里萨布兹"
