--- a/localisation/simp_chinese/LFB_DDS_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_DDS_l_simp_chinese.yml
@@ -4,11 +4,56 @@
  var_nationality.2001:"乌兹别克，塔吉克少数民族人口占比明显"
  var_nationality.2002:"吉尔吉斯，俄族技术移民人口占比明显"
  var_nationality.2003:"吉尔吉斯，乌兹别克和塔吉克少数民族占比明显"
+ var_nationality.338:"高山塔吉克，由于苏联混乱的民族识别工作，一些居民也称自己为“帕米尔人”"
+ #意识形态#
+ ultranationalism_qutbism_subtype: "库特布主义"
+ ultranationalism_qutbism_subtype_desc: "一千多年前，阿拉伯半岛的人们沉浸于蒙昧与无德之中：他们对人造的偶像加以膜拜，在水中溺死初生的女婴，整个社会自上到下都弥漫着血腥与欺诈。然而，一位义人跟随着真主的指引，从部落民中脱颖而出，向他们传达有关谦卑与服从的旨意。昔日弱小、贫穷而自相倾轧的阿拉伯人很快在伊斯兰信仰的指引下团结一致，战胜一切威胁他们的敌人，并开创了一个文化与科学都蓬勃发展的黄金时代。\n\n然而，对赛义德·库特布和他的追随者来说，那个繁荣和辉煌的时代早已化为尘封史书中的几笔干墨，割开虔信与正义的假象，映入眼帘的只有无穷无尽的蒙昧和堕落。伊斯兰世界曾经辉煌万丈的心脏早已停止跳动，昔日横跨欧亚大陆的帝国也早已沦为诸多向异教徒帝国主义者屈服的人造国家。无能无德的统治者们为西方殖民者的暴行欢呼，对自己人民的苦难视而不见，放任恶习与放荡在社会中蔓延，犯罪则成了在这样的世界中生存的必然前提。\n\n对库特布主义者而言，要想解决穆斯林世界正面临的危险，就不能崇拜华而不实的外来民族主义思想或复杂枯燥的阶级二分法，而只能回归真主与先知的话语。只有组织一支由少数虔信者组成的先锋队，清除物质世界的甜蜜陷阱，重新确立真主在大地上的统治，才能将无知与欺骗从社会的每一个缝隙中清除。只有这样，乌玛才能回到那个团结与繁荣的时代，创造一个没有帝国主义殖民者和放荡欲望的新世界——一个人人都毫不在乎空浮的物质，而只关注自己与教胞在天堂中的阶位的世界。"
+ 
+ #国家tag#
+ HUT: "伊斯兰解放党"
+ HUT_DEF: "伊斯兰解放党"
+ HUT_ADJ: "伊斯兰解放党"
+ HUT_ultranationalism_party: "伊斯兰解放党"
+ HUT_ultranationalism_party_long: "伊斯兰解放党"
+ TJD: "塔吉克联合反对派"
+ TJD_DEF: "塔吉克联合反对派"
+ TJD_DEF: "塔吉克"
+ TJD_paternalism_party: "联合武装斗争指挥部"
+ TJD_paternalism_party_long: "联合武装斗争指挥部"
+ TJD_despotism_party: "塔吉克伊斯兰复兴党"
+ TJD_despotism_party_long: "塔吉克伊斯兰复兴党"
+ TJD_conservatism_party_long: "塔吉克农业党"
+ TJD_conservatism_party: "塔吉克农业党"
+ TJD_liberal_conservatism_party: "经济改革党"
+ TJD_liberal_conservatism_party_long: "经济改革党"
+ TJD_liberalism_party: "争取民主与反腐败专制第24组"
+ TJD_liberalism_party_long: "争取民主与反腐败专制第24组"
 
 #人物介绍#
  UTL_Mustafa_Shokay:"穆斯塔法·绍凯"
  UTL_Mustafa_Shokay_desc:"1890年，穆斯塔法·绍凯出生在哈萨克草原上的一个富庶且地位卓著的贵族家庭。流淌着克烈与扎尼别克血脉的他自幼就展现出了惊人的天赋，后来又前往圣彼得堡法学院继续深造。穆斯塔法·绍凯的未来似乎注定如同草原上空的耀日般，明亮而灼目。然而，随着萨拉热窝的一声枪响，一切都幻灭了。沙皇政府很快就在内忧外困中倒台，红色浪潮扫过了双头鹰旗帜下的每一寸土地，包括他的家乡。当时他正与同僚们共同商讨着突厥斯坦的自治，为中亚人民谋取决定自己命运的权力，但回应他的只有布尔什维克的刺刀与铅弹。穆斯塔法·绍凯由此踏上了流亡的旅程，几经辗转后在巴黎安定下来，这一走就是二十年。\n\n1941年，纳粹帝国的战争机器席卷东欧，所有出生在苏联领土上的知名侨民都遭到了占领军的逮捕，绍凯也不例外。但短短几个星期后，纳粹就提出希望由他领导“突厥斯坦军团”——一支由侨民和战俘组成的辅助部队，为争取突厥斯坦的自由而对抗苏联。在东方事务部长阿尔弗雷德·罗森贝格的引荐下，绍凯披上了黑色军服，带领军团见证了红色巨人的毁灭，但德国人并没有履行他们的承诺。自那以后的每天每夜，军团的战士们都忙于镇压匪徒和游击队，只有战斗的间隙才能坐在阿斯特拉罕的河滩上，遥望国境线另一侧的广阔草原。\n\n十年后，事情又一次迎来了转机。西俄罗斯革命阵线发动了背水的一战，突厥斯坦军团再次投入进了对抗布尔什维克的战斗中。但在某个大雪纷飞的夜晚，瑟缩在前线指挥部中的军团士兵们忽然发现，一支戴着手榴弹臂章的党卫军部队向自己发动了攻击。穆斯塔法·绍凯嗅到了危险的气息，他知道德国人终于要对自己下手了。突厥斯坦军团迅速脱离了战斗序列，一路跋涉穿越混乱的高加索，来到了里海沿岸的伊朗境内。但沙阿不愿破坏与德国盟友的关系，于是把军团打包装进了火车，运向东方的阿富汗。在那里，穆斯塔法·绍凯得到了一个机会，一个期望已久的返回故土的机会。\n\n这就是穆斯塔法·绍凯用来减轻自己负罪感的说辞。所有人都知道“突厥斯坦军团”不过是一群受过训练的土匪，他自己也不过是个懦弱的投机家，但绍凯本人对此毫不理会。但在某间门窗紧闭的办公室里，桌上那张插满军团旗帜的中亚地图早已浸透了泪渍。"
  Turkestan_freedom_fighter:"突厥斯坦的老斗士"
+ UZB_START: "夏拉夫·拉希多维奇·拉希多夫"
+ UZB_START_desc: "俗话说，塞翁失马，焉知非福。尽管这是一句中国谚语，但夏拉夫·拉希多维奇·拉希多夫恐怕是世上最能理解其含义的人之一。\n\n俄历1917年10月24日，涅瓦河的炮鸣响起的前夜，夏拉夫·拉希多维奇·拉希多夫出生在吉扎克的一个普通农民家庭。1941年6月21日，拉希多夫从撒马尔罕国立大学毕业；还没来得及从期待与不舍中回过神来，他就发现自己手持钢枪，站在了卫国战争的最前线。英勇与战功为他赢得了红星勋章与一身重伤，1943年，拉希多夫刚在乌兹别克的医院中恢复健康，准备重返战场，噩耗就从莫斯科传来，他们输了。\n\n国难打倒了许多人，但绝对不包括拉希多夫。1948年，拉希多夫顺利从塔什干的党校毕业，然后就被中央调到了撒马尔罕任职。他的许多朋友都对此感到愤慨，苏维埃怎能把为她泼洒鲜血的英雄扔到一旁？但一向乐观随和的拉希多夫只是默默接受，没过多久塔什干就爆发了一次有秋明政权参与的领导层清洗。身为共产主义者，拉希多夫并不相信所谓的前定，但他能感到自己注定要背负比其他人更沉重的担子。\n\n事实确实如此，尽管他没能挤进首都，但很快首都就奔他而来。费尔干纳这个中亚火药桶爆炸了，塔什干的领导层匆忙逃离，将废墟、灰烬与人民通通抛在身后。随着努库斯的独立与军团的入侵，灰头土脸的老干部很快被愤怒的党员们赶下了权力舞台。身为当地党员的代表，夏拉夫·拉希多维奇·拉希多夫从他们手中接过了这个四境皆失、大难临头的国家。\n\n拉希多夫没能给乌兹别克带来什么实质性的改变，或者说，他的努力让这片土地不至于陷入进更深的灾难：他没能收复南方那块盘踞着纳粹匪徒的土地，但他指挥的防御战也打消了他们进犯布哈拉与撒马尔罕的念头；他也没能消灭乡间横行的武装分子，但他的手段总能让其中的一些人效忠于他或与他合作；他同样没能重新打通与塔什干的联系，但总能设法让更多的物资流进这座孤城。\n\n许多党员都以一种同情的语气悄悄谈论着他，认为他在一个更美好的世界里必定能让乌兹别克获得前所未有的繁荣与辉煌。但拉希多夫本人一直觉得，与其目睹祖国与家乡在混沌中堕落，在保卫莫斯科的战斗中英勇牺牲才是最大的幸运。"
+ Samarkand_Fortunate_Painter: "“幸运”的裱糊匠"
+ TAJ_START: "贾布尔·拉苏诺维奇·拉苏诺夫"
+ TAJ_START_desc: "农业或许是人类所创造的最接近生命本质的发明：两个天差地别的物种因为某些偶然的巧合而命运相连，在吞噬与被吞噬的循环中保证对方的生存与延续，最终再也无法分开。一旦循环崩解，文明就会消逝；这就是贾布尔·拉苏诺维奇·拉苏诺夫正目睹着的惨剧。\n\n贾巴尔·拉苏洛维奇·拉苏洛夫出生于1913年。与其他在苏联政治体制内攀上高位的人不同，他从始至终都是一位技术官僚。1934年，他刚从中亚棉花灌溉学院毕业，就被派往塔吉克南部，荒凉而未经开发的瓦赫什河谷，负责棉花种植业的发展。凭借着中央的支持和他个人的努力，瓦赫什河谷一跃成为仅次于费尔干纳的全共和国第二大粮棉产地，而这将在二十年后挽救这片土地上的许多生命。这份功绩让他得以升迁为塔吉克农业部长，甚至有传言称克里姆林宫正准备将他提拔到党中央，负责管理全联盟的农业事务。\n\n与许多人一样，他的仕途也随着卫国战争的打响而中断了。前线每一天都在向莫斯科逼近，每一天莫斯科都在渴求着更多的养分以供维生，几乎快要将中亚土地的生命力吸取殆尽。拉苏洛夫明白危难当前每个人都必须作出必要的牺牲，但他也不能放任塔吉克人民蜷缩着肚子死去。于是他将精力放在了细致的统筹规划上，这一举动为他赢取了尊敬，但也让将来的他坐在一个不被人羡慕的位置上。\n\n某位古希腊先贤说过，若你远离政治，政治便冲你而来。苏联的垮台与秋明政权统合中亚的努力给这位从未触碰过意识形态的技官带来了前所未有的冲击。快速转向斯大林意识形态的塔吉克领导层迫切想要寻找一个能够担下布哈林时代罪责的替罪羊，政治势力浅薄的拉苏洛夫就这样成了软柿子，被下放回了瓦赫什继续当他的农学家。但朝令夕改从来都不是一件好事，照秋明画瓢的干部很快就把苦盏的农业生产搞得一团糟，致使塔吉克遭受了费尔干纳之乱与阿富汗趁乱入侵两次重大打击，半壁江山已失，失去民心的领导层只能看着拉苏诺夫迷迷糊糊地被抬上主席的座位。\n\n在无力回天的国内局势面前，拉苏诺夫的眼中只有迷茫。有时，敲响他办公室门的职员只能看到一张空无一人的办公桌，乡间劳作的棉农却会不经意地在余光瞥见报纸上的那张面庞。"
+ Vakhsh_Cottoner: "瓦赫什棉农"
+ TAJ_START1: "图尔达昆·乌苏巴利耶夫"
+ KRK_START1: "阿梅特·沙穆拉托夫"
+ KRK_START1_desc: "人生中最痛苦的事情是什么？是燃尽生命所追求之物仍遥不可及，还是历经辛苦达成圆满，所得之物却令自己厌恶？\n\n阿梅特·沙穆拉托夫于1912年出生在霍杰伊利的一个贫苦农民家庭，年纪轻轻就担任过小学教师、地区督查、地方苏维埃书记等多个职位，但他在24岁那年终于发现，艺术创作才是最能让自己的才华充分施展的领域。他既能为孩童写出充满想象力与精彩情节的冒险故事，也能尽情赞美祖国人民的勤劳与智慧。当战争的毁灭与死亡终于蔓延到苏维埃联盟时，他已经身居卡拉卡尔帕克苏维埃副主席之位。官职与战争也没能阻挡阿梅特·沙穆拉托夫创作的热情，他转而歌颂人民在战争年代的艰难困苦中进行劳动与斗争，并对此感到由衷的自豪。\n\n但世界是物质的，讴歌与赞扬也无法阻挡纳粹帝国的履带与钢靴。他从不吝惜笔墨与辛劳赞扬的祖国在他面前轰然倒地，连年的战火已经抽干了这里的资源与年轻血液，所有人都无法接受这样的后果。但生活还要继续，阿梅特·沙穆拉托夫也仍在继续创作，鼓励人民走出失败的阴影，适应这个陌生的新世界。\n\n只是，这个新世界丝毫没有放过这片土地与人民，也没有放过他。随着西俄罗斯的战火再次燃起又熄灭，人们再也按捺不住了。努库斯苏维埃的代表们知道自己无力抵挡人民的怒火，于是以忐忑的心情宣告了卡拉卡尔帕克共和国脱离苏联与乌兹别克，正式独立。毫无悬念地，阿梅特·沙穆拉托夫凭借自己的声望与演说才能被选为总统。\n\n纵夜的狂欢固然能给予人欢乐，但在头昏脑沉中迎来第二天黎明就是另一回事了。更改国旗和国号没法填饱饥肠辘辘的贫民，老干部们也无力撑起一个完整的国家机器；趁乱强占花剌子模也许是他一生中最后悔的决定，与哈萨克的紧密关系也经受不住时间的考验。这位作家终于把笔扔到了一旁，任凭它摔在地板上溅出一地墨汁。书柜中还躺着一部未写完的作品，而他怀疑自己此生恐怕没有机会将它完成了。\n\n人生中最痛苦的事情是什么？是燃尽生命所追求之物仍遥不可及，还是历经辛苦达成圆满，所得之物却令自己厌恶？对阿梅特·沙穆拉托夫来说，他此刻正同时经历着两种痛苦。"
+ Writer_Nukus: "努库斯文豪"
+ TRK_START: "巴利什·奥维佐维奇·奥维佐夫"
+ TRK_START_desc: "自古以来，土库曼斯坦就是一片荒凉而为人所忽视之地，既比不过北方富饶的三角洲与宏伟的玉龙杰赤城，也不像南方的呼罗珊那样被一代又一代征服者青睐，只有梅尔夫废墟的黏土和碎砖在提醒人们这片土地的过去与一如既往的未来。而在巴里什·奥维佐维奇·奥维佐夫眼中，此时此刻恰如彼时彼刻。\n\n巴里什·奥维佐维奇·奥维佐夫在1915年出生于花剌子模绿洲西南角的一个小村庄。他的前半生都在政治金字塔中度过，一路可谓是平步青云，最终在卫国战争战败那年从苏共中央的党校毕业。但他在政治场里待得越久，级别越高，就越觉得自己乃至整个苏维埃联盟都没能给土库曼斯坦带来什么根本性的变革：布哈林不愿改变广袤乡村的传统生活方式，尽管苏维埃统治已经持续了一代人，他家乡的许多人仍在过着和几百年前一样的日子：四处寻找水源与草地，放牧羊和骆驼；或是夏秋收割庄稼，然后将营帐迁到绿洲与族人一同过冬。培养民族认同的努力也失败了，与其将自己视为土库曼人，这片土地的居民更喜欢用各自部落来定义自己，然后围绕着它们争执不休。但至少，在阿什哈巴德担任党职时，奥维佐夫可以忘却掉这些，沐浴现代与社会主义的微光，以至于忘记这束微光的源头早已黯淡。\n\n然后阿什哈巴德大地震就打碎了这一切。尽管奥维佐夫及时被搜救者拽了出来，但他的灵魂——与土库曼斯坦的灵魂——早就消散在了那片废墟中，以至于忘却了自己是什么时候坐到这个位置上的。桀骜不驯的部落头领主宰了乡间，也许游牧民与生俱来的特性让他们不会屈服于除力量与财富外的任何东西。土库曼佣兵曾在奥斯曼与萨法维的旗帜下英勇奋战，也曾建立塞尔柱和阿夫沙尔这样的伟大王朝，但他们就是无法在自己民族的旗帜下团结一致。奥维佐夫一直以来都知道，他们才是土库曼斯坦的真正统治者，自己不过是阿什哈巴德废墟的守墓人。\n\n也许，百年过后，当来自遥远土地的旅行者们探访此处，枯骨般的钢筋、四散的砖块和断裂的水泥板也会提醒他们，这片土地的过去与未来都一如既往。"
+ Ashgabad_Tomb_Watcher: "守墓人"
+ KRK_START: "谢苗·瓦夏金"
+ KYR_START: "图尔达昆·乌苏巴利耶夫"
+ KYR_START_desc: "说话是人的本能，说正确的话是优秀的品质，懂得在什么时候说正确的话则是万里挑一的能力。\n\n图尔达昆·乌苏巴利耶夫出生于1919年，职业生涯则始于在家乡村庄中的学校担任教导主任。很快，学生和教师们都发现，与平常那些充斥着空浮说教的长篇大论不同，他的演说总是短暂无比，却拥有一股凝聚人心的力量。很快这份能力就得到了他上级的赏识，乌苏巴利耶夫也进入了宣传鼓动部就职。卫国战争爆发后，他撰写的文章与发表的演讲极大地抚平了民心，有些人甚至认为是他，而非莫斯科或伏龙芝在维系吉尔吉斯的稳定。\n\n苏维埃联盟崩溃后，秋明的斯大林政权与中亚各苏维埃政权建立了联系。此时中亚各国都努力在试着摆脱过去的阴影，斯大林带来的新意识形态理念凑巧给他们带来了机会。随着乌兹别克正式作出意识形态转向，伏龙芝的领导层也有些按捺不住了。就在此时，一直被人们视为苏维埃喉舌的乌苏巴利耶夫忽然开动宣传机器，对秋明政权展开了批评和质疑。有关意识形态转向的决定很快就在领导层间掀起了一场争论，最后不了了之。乌苏巴利耶夫则借着这个机会在党内左右逢源，甚至挤进了伏龙芝苏维埃。\n\n但很快，指导政策贸然转向招致的恶果就开始显现，乌兹别克和塔吉克对地方事务的贸然干涉引发了前所未有的央地冲突，费尔干纳之乱爆发了。在伏龙芝上下对此一筹莫展之际，乌苏巴利耶夫再次出手了。一时间，举国上下似乎都在要求领导层动用强力的手段，保障费尔干纳的安全。\n\n随着吉尔吉斯安全部队开进安集延、苦盏、浩罕和古利斯坦，乌苏巴利耶夫的名望前所未有地高涨，于是顺理成章地坐到了吉尔吉斯领导人的位置上。此前极力反对意识形态转向的他甫一上台便更改了党名，剔除了布尔什维主义中“不合时宜”的要素，又将新吉尔吉斯粉饰为突厥斯坦自治政府的合法继承者。\n\n在吉尔吉斯人民眼中，乌苏巴利耶夫是一位伟大的领袖、改革者与民族英雄，有力地在后苏联时代保障了吉尔吉斯乃至周边地区的稳定。但这既不是事实，也不是谎话。图尔达昆·乌苏巴利耶夫不仅懂得在什么时候说正确的话，也知道谎言不等于不正确。只是，一些人不会同意这个观点。"
+ KYR_Great_Turner: "伟大转折者"
+ TJD_Mawlavi_Hindustani: "毛拉维·印度斯坦尼"
+ TJD_Mawlavi_Hindustani_desc: "库特布我操死你妈"
+ HUT_Taqidin_Nabhani: "塔基亚丁·纳巴尼"
+ HUT_Taqidin_Nabhani_desc: "库特布万岁"
  
  #国家精神#
 
@@ -68,14 +113,14 @@
  LFB_DDS_news.2.a:"他们说，塔什干地下有一片沸腾的海洋……"
  
  LFB_DDS_news.3.t:"[Get_newspaper_header]第二次费尔干纳之乱"
- LFB_DDS_news.3.d:"三十年代，苏联的民族识别政策致使物产丰美的费尔干纳盆地被分割给了周边的三个加盟共和国。但随着西西伯利亚人民共和国于50年代毁于内乱，中亚各苏维埃政权也纷纷崩溃，争夺水源与公路的冲突和边境地区的权力真空引发了第一次费尔干纳之乱。乌兹别克与塔吉克政府的虚弱无力致使吉尔吉斯领导层下定决心，出动军队强行接管了整个费尔干纳地区，甚至包围了塔什干，将它与乌兹别克其他地方分割开来。\n\n好景不长，由于塔什干大地震及其带来的一系列次生灾害和后续问题，费尔干纳再次燃起战火。据称吉尔吉斯军警已经失去了对安集延的控制，塔什干城内的灾民也掀起了或自发或有组织的抵抗，并攻占了数个城市外围的“检查点”。\n比什凯克方面已对当下的局势焦头烂额。但从另一个角度来看，这次动乱也给了中亚各国一个坐在谈判桌前，一劳永逸地解决苏联遗留问题的契机。"
+ LFB_DDS_news.3.d:"三十年代，苏联的民族识别政策致使物产丰美的费尔干纳盆地被分割给了周边的三个加盟共和国。但随着西西伯利亚人民共和国于50年代毁于内乱，中亚各苏维埃政权也纷纷崩溃，争夺水源与公路的冲突和边境地区的权力真空引发了第一次费尔干纳之乱。乌兹别克与塔吉克政府的虚弱无力致使吉尔吉斯领导层下定决心，出动军队强行接管了整个费尔干纳地区，甚至包围了塔什干，将它与乌兹别克其他地方分割开来。\n\n好景不长，由于塔什干大地震及其带来的一系列次生灾害和后续问题，费尔干纳再次燃起战火。据称吉尔吉斯军警已经失去了对安集延的控制，塔什干城内的灾民也掀起了或自发或有组织的抵抗，并攻占了数个城市外围的“检查点”。\n\n比什凯克方面已对当下的局势焦头烂额。但从另一个角度来看，这次动乱也给了中亚各国一个坐在谈判桌前，一劳永逸地解决苏联遗留问题的契机。"
  LFB_DDS_news.3.a:"这地方就没几天安生时候。"
  LFB_DDS_news.3.b:"希望我们以后不会犯这样的错误。"
  LFB_DDS_news.3.c:"是时候和钦察人算算账了。"
  LFB_DDS_news.3.e:"我们早该料到。"
  
  LFB_DDS_news.4.t:"[Get_newspaper_header]阿富汗撤离山地-巴达赫尚"
- LFB_DDS_news.4.d:"阿富汗王家陆军发言人于今天正式宣布，出于“该地区不可逆转地恶化的安全局势”以及“阿富汗人民的普遍意愿”，阿富汗军队将彻底撤离山地-巴达赫尚地区，结束长达十余年的占领。\n\n山地-巴达赫尚地区是阿富汗国王查希尔沙阿梦寐以求的“大普什图尼斯坦”的最北端，也是阿富汗在战后的扩张期间最轻易地从邻国夺取的一块领土。但随着当地抵抗运动“巴达赫尚红宝石”的活动烈度与日俱增，阿富汗军队在这个人口稀少、资源匮乏的地区付出了几百条人命的代价，伤员更是不计其数。随着时间的流逝，阿富汗公众越来越不愿看到自己的家人和朋友为保住这块不毛之地而白白流血，更别提数名日本军事顾问的死亡对阿富汗与其最大盟友关系的损害。\n\n与此同时，“巴达赫尚红宝石”正在积极地与杜尚别方面商谈权力交接事宜。"
+ LFB_DDS_news.4.d:"阿富汗王家陆军发言人于今天正式宣布，出于“该地区不可逆转地恶化的安全局势”以及“阿富汗人民的普遍意愿”，阿富汗军队将彻底撤离山地-巴达赫尚地区，结束长达十余年的占领。\n\n山地-巴达赫尚地区是阿富汗国王查希尔沙阿梦寐以求的“大普什图尼斯坦”的最北端，也是阿富汗在战后的扩张期间最轻易地从邻国夺取的一块领土。但随着当地抵抗运动“巴达赫尚红宝石”的活动烈度与日俱增，阿富汗军队在这个人口稀少、资源匮乏的地区付出了几百条人命的代价，伤员更是不计其数。随着时间的流逝，阿富汗公众越来越不愿看到自己的家人和朋友为保住这块不毛之地而白白流血，更别提数名日本军事顾问的死亡对阿富汗与其最大盟友关系的损害。\n\n与此同时，“巴达赫尚红宝石”正在积极地与布哈林纳巴德方面商谈权力交接事宜。"
  LFB_DDS_news.4.a:"以闹剧开场，以悲剧收尾。"
  LFB_DDS_news.4.b:"还不如把钱扔进海里呢……"
  LFB_DDS_news.4.c:"对日帝走狗的一场胜利。"
@@ -107,11 +152,19 @@
  LFB_DDS_news.8.b:"祖国是我们的灵魂，牺牲是我们的热血！"
  LFB_DDS_news.8.c:"法西斯分子，格杀勿论！"
  
+ LFB_DDS_news.9.t:"[Get_newspaper_header]苦盏事变"
+ LFB_DDS_news.9.d:"第二次费尔干纳之乱的战火燃烧许久，终于引发了更大的灾难：就在今天，前塔吉克第二大城市苦盏爆发了声势浩大的反政府示威活动。抗议者和吉尔吉斯军警在街头展开了对峙，空气中弥漫着烧焦的轮胎和催泪弹的气味，有多名记者声称双方都出现了伤亡。\n\n即使就第一次费尔干纳之乱结束后混乱就一刻未息的中亚局势而言，苦盏也是一座相当动荡的城市，乃至担负着伊斯兰解放党中亚总部的恶名。有传言称该党已经在城内秘密组织民兵，向愤怒的群众分发宣传单和武器。\n\n周边各国都对当下的局势表达了担忧，认为这一事件可能会成为伊斯兰解放党在中亚掀起公开武装叛乱的导火索。与此同时，这一事件也揭晓了一个事实：虚弱无能的中亚各政权已经无力处理日渐白热化的费尔干纳局势。"
+ LFB_DDS_news.9.a:"涟漪化为海浪……"
+ 
+ LFB_DDS_news.10.t:"[Get_newspaper_header]塔吉克内战"
+ LFB_DDS_news.10.d:"又一场灾难降临了塔吉克斯坦：该国民众因塔吉克当局长期未能妥善解决粮食与领土问题而产生了严重的不满。在本土派伊斯兰主义者和国内民主改革派的领导下，塔吉克南部的库洛布市爆发了规模浩大的武装起义。新组建的“塔吉克联合反对派”宣称要推翻腐朽无能的布哈林纳巴德政府，为塔吉克人民争取馕饼、土地与自由；一些消息来源声称，阿富汗政府正在秘密援助他们。\n\n雪上加霜的是，盘踞北部苦盏城的伊斯兰解放党民兵也看准了这个机会，挥师南下，致使塔吉克政府面临两面包夹的窘境，曾经不可一世的吉尔吉斯安全部队却借机悄然撤离了苦盏周边地区。\n\n随着冲突蔓延到塔吉克各地，渴望对中亚施加影响力的各方都必定会抓紧时机，争夺这块苏维埃联盟尸首上最贫瘠的土地。"
+ LFB_DDS_news.10.a:"……而海浪掀起了洪水滔天。"
+ 
  
  #风味儿类事件#
  
  LFB_DDS.1.t:"红与黑"
- LFB_DDS.1.d:"“所以您的意思是，这伙土匪战斗力和组织性高得不正常？”政治保卫处地方工作部主任秦同辉向一旁陪同的地方民兵干部问道。\n“是啊，我们上星期和他们第一次交手时就注意到了。这帮混账的枪法不比我们差，牺牲了好几个同志才勉强把他们打退，他们甚至还会在撤退的时候交替掩护射击。昨天夜里我们突袭了他们的据点，也只抓到了一个舌头，审了一宿也没出啥结果。”\n“他是不开口吗？还真是够死硬的……”\n“不不不，他老早就开口了。”民兵干部慌慌张张的打断了他。“问题是，我们这没一个人能听懂他说的啥。村里的老毛拉之前去了一趟，但也只能听出来这家伙说的是阿拉伯语，毕竟他也上了年纪了。”\n秦同辉还没来得及往下思考，临时关押用的土坯房就出现在了他面前。二人开锁进去，就看到屋里的破椅子上五花大绑了一个人，鼻梁高得吓人，胡子更是厚得看不见嘴。尽管浑身上下没有什么伤痕和血迹，他的脸却如同死人般铁青，好像一宿没睡。\n秦同辉大步走到他面前，紧紧扯住了他的衣领，尽力在脑海中搜索自己年轻时在苏联学的阿拉伯语：“liman taemala”，意思大概是“你为谁工作”吧，他心里也没底儿。\n那人的神色明显一怔，随后又平静而疲惫地吐出了两个词，好像弹琴的人终于找到了一头懂得欣赏音乐的牛：“hizb al-tahrir……”\n“我没记错的话，hizb是党的意思吧？”民兵干部若有所思，一道寒光闪过了他的思绪，让他不自觉地与秦同辉四目相对。\n “事态严重了，我得把这件事上报给中央。这段时间麻烦你们看管好他。”"
+ LFB_DDS.1.d:"“所以您的意思是，这伙土匪战斗力和组织性高得不正常？”政治保卫处地方工作部主任秦同辉向一旁陪同的地方民兵干部问道。\n“是啊，我们上星期和他们第一次交手时就注意到了。这帮混账的枪法不比我们差，牺牲了好几个同志才勉强把他们打退，他们甚至还会在撤退的时候交替掩护射击。昨天夜里我们突袭了他们的据点，也只抓到了一个舌头，审了一宿也没出啥结果。”\n“他是不开口吗？还真是够死硬的……”\n“不不不，他老早就开口了。”民兵干部慌慌张张的打断了他。“问题是，我们这没一个人能听懂他说的啥。村里的老毛拉之前去了一趟，但也只能听出来这家伙说的是阿拉伯语，毕竟他也上了年纪了。”\n秦同辉还没来得及往下思考，临时关押用的土坯房就出现在了他面前。二人开锁进去，就看到屋里的破椅子上五花大绑了一个人，鼻梁高得吓人，胡子更是厚得看不见嘴。尽管浑身上下没有什么伤痕和血迹，他的脸却如同死人般铁青，好像一宿没睡。\n秦同辉大步走到他面前，紧紧扯住了他的衣领，尽力在脑海中搜索自己年轻时在苏联学的阿拉伯语：“liman taemala”，意思大概是“你为谁工作”吧，他心里也没底儿。\n那人的神色明显一怔，随后又平静而疲惫地吐出了两个词，好像弹琴的人终于找到了一头懂得欣赏音乐的牛：“hizb ut-tahrir……”\n“我没记错的话，hizb是党的意思吧？”民兵干部若有所思，一道寒光闪过了他的思绪，让他不自觉地与秦同辉四目相对。\n “事态严重了，我得把这件事上报给中央。这段时间麻烦你们看管好他。”"
  LFB_DDS.1.a:"一个敌对政党渗透进来了……但是从哪来的呢？"
  LFB_DDS_hizb_tahrir_discover_tooltip:"一个新的威胁正高举§g黑旗§!从遥远之地袭来，威胁着新生的§e红色政权§!。§R欲想拔树，必先寻根。§!"
  
