--- a/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
@@ -30,7 +30,7 @@
   PRC_Mao_Zedong: "毛泽东"
   COX_helmsman: "舵手"
   Yang_Zhicheng: "杨至诚"
-
+  Li_Tian_You: "李天佑"
   Anti_Communist_Conference: "新疆反共联军会议"
 
 
@@ -58,13 +58,6 @@
   Li_Da: "李达"
 
 #东突
-  UZB_START: "夏拉夫·拉希多维奇·拉希多夫"
-  TAJ_START: "拉苏诺维奇·贾布尔·拉苏诺夫"
-  TAJ_START1: "图尔达昆·乌苏巴利耶夫"
-  KRK_START1: "阿梅特·沙穆拉托夫"
-  TRK_START: "巴利什·奥维佐维奇·奥维佐夫"
-  KRK_START: "谢苗·瓦夏金"
-  KYR_START: "图尔达昆·乌苏巴利耶夫"
 
 
 
