--- a/localisation/simp_chinese/replace/COX_state_names_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/COX_state_names_l_simp_chinese.yml
@@ -6,7 +6,8 @@
  STATE_619: "喀什"
  STATE_585: "纳沃伊"
  STATE_586: "费尔干纳"
- STATE_742: "杜尚别"
+ STATE_732: "伊塞克湖"
+ STATE_742: "布哈林纳巴德"
  STATE_750: "中卡拉卡尔帕克"
  STATE_957: "哈密"
  STATE_958: "巴音郭楞"
@@ -27,8 +28,8 @@
  STATE_2023: "和阗"
  STATE_2024: "塔克拉玛干"
  STATE_2025: "河西"
- STATE_2026: "伊犁河谷西段"
- STATE_2027: "比什凯克"
+ STATE_2026: "伊犁河谷西北段"
+ STATE_2027: "伏龙芝"
  STATE_2028: "贾拉拉巴德"
  STATE_2029: "奥什"
  STATE_2030: "巴特肯"
@@ -40,3 +41,6 @@
  STATE_2036: "花剌子模"
  STATE_2037: "北卡拉卡尔帕克"
  STATE_2038: "南拉卡尔帕克"
+ STATE_2039: "哈特隆"
+ STATE_2040: "伊犁河谷西南段"
+ STATE_2041: "帕米尔高原"
