--- a/localisation/simp_chinese/replace/TNO_Turkestan_Legion_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/TNO_Turkestan_Legion_l_simp_chinese.yml
@@ -37,8 +37,8 @@
  UTL_Baymirza_Legion_DEF: "突厥国"
  UTL_despotism_party: "突厥斯坦军团（库尔希尔马特派）"
  UTL_despotism_party_long: "突厥斯坦军团（库尔希尔马特派）(Turkiston legioni (Korsimat's Clique))"
- UTL_fascism_party: "突厥斯坦全国统一委员会 - 少壮派"
- UTL_fascism_party_long: "突厥斯坦全国统一委员会 - 少壮派"
+ UTL_fascism_party: "突厥斯坦全国统一委员会"
+ UTL_fascism_party_long: "突厥斯坦全国统一委员会"
  UTL_national_socialism_party: "突厥斯坦全国统一委员会"
  UTL_national_socialism_party_long: "突厥斯坦全国统一委员会"
  UTL_despotism_occupation_party: "突厥斯坦军团（纳扎尔派）"
