--- a/localisation/simp_chinese/COX_traits_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_traits_l_simp_chinese.yml
@@ -15,3 +15,5 @@
   guerrilla_leader: "游击队领袖"
   northwestern_backbone: "西北脊梁"
   XI_BEI_WANG: "西北王"
+  Korean_Revolutionary: "朝鲜派军官"
+  Korean_Revolutionary_desc: "这位将军出身自遥远的朝鲜半岛，但仍义无反顾地跟随第88旅走遍了万里征途，为革命解放事业而奋斗。"
