--- a/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
@@ -31,6 +31,9 @@
   COX_helmsman: "舵手"
   Yang_Zhicheng: "杨至诚"
   Li_Tian_You: "李天佑"
+  Zhong_Chi_Bing: "钟赤兵"
+  Choe_Yong_Gon: "崔庸健"
+  Kim_Chaek: "金策"
   Anti_Communist_Conference: "新疆反共联军会议"
 
 
