--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -58,6 +58,8 @@ XBJ_communist_party: "中国共产党 - 西北局"
 XBJ_despotism_party: "宁系马家"
 XBJ_liberal_conservatism_party: "国民党行政公署"
 XBJ_liberalism_party: "国民党知识分子"
+XBJ_NRA: "国民革命军残部"
+XBJ_NRA_long: "国民革命军残部"
 
 HNA: "海南军政监"
 HNA_DEF: "海南军政监"
