--- a/localisation/simp_chinese/LFB_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_events_l_simp_chinese.yml
@@ -631,19 +631,19 @@
 
 #新闻
  COX_news_event.1.t:"[Get_newspaper_header]西蒙奇闻"
- COX_news_event.1.d:"就在几天前，日本帝国就近期发生在蒙古草原上的冲突召开了发布会。会上宣布，此次冲突是由俄罗斯地区所谓的“人民革命委员会”在边境的挑衅所致，在蒙古国陆军与日本空军的通力协作之下，敌军已经被完全击溃，此次胜利再一次彰显了大东亚共荣的理念，是泛亚人种通力协作，击败敌人的又一次明证……但据前线士兵透露，此次作战中，红军中也有为数不少的东亚面孔，其中一支被称为“中国旅”的部队，其战术之诡诈，战技之娴熟，给与之交手过的士兵留下了深刻的印象。\n对于这种说法，日本帝国官方予以了坚决的否认。"
+ COX_news_event.1.d:"就在几天前，日本帝国就近期发生在蒙古草原上的冲突召开了发布会。会上宣布，此次冲突是由俄罗斯地区所谓的“人民革命委员会”在边境的挑衅所致，在蒙古国陆军与日本空军的通力协作之下，敌军已经被完全击溃，此次胜利再一次彰显了大东亚共荣的理念，是泛亚人种通力协作，击败敌人的又一次明证……但据前线士兵透露，此次作战中，红军中也有为数不少的东亚面孔，其中一支被称为“中国旅”的部队，其战术之诡诈，战技之娴熟，给与之交手过的士兵留下了深刻的印象。\n\n对于这种说法，日本帝国官方予以了坚决的否认。"
  COX_news_event.1.a:"又一个俄罗斯大地上的传说而已。"
  COX_news_event.2.t:0 "[Get_newspaper_header]西宁之战"
- COX_news_event.2.d:0 "在远离人烟的中国西北，一场旨在征讨民国旧日幽灵的血腥的战争仍在继续。\n一开始，帝国远征军很快征服了兰州，并击毙了匪首马步芳。帝国军队本以为这又是一场唾手可得的胜利，但当地人民的抵抗远远超出了日军的估计。在兰州城之外的广大荒原中，日军的巡逻队不断忍受着来自各种游击队的袭扰，又因为路途遥远，东京发来的补给不得不遭到了各种损耗，变得捉襟见肘。\n缺枪少弹的日军，对上意志坚定的中国游击队，这场发生在西北的冲突越来越像是上一场战争在二十年后的延续。但在最近的一次扫荡中，日军终于暂时击败了游击队的主力，辻政信立刻集结重兵，向着西宁进军。在这位疯狗将军看来，西宁之战，将成为这场血腥战争的转折点，帝国的又一场大胜触手可及。而马步芳之子——马继援已经重整了青海的残兵，在西宁构建了顽强的防线，抵御了日军的攻势，而就在日军止步于西宁脚下时，那些游击队又发动了大规模的袭击。在补给线被完全切断的风险面前，辻政信只得命令部队撤回兰州，在西宁城下，帝国军遭遇了屈辱的大败。"
+ COX_news_event.2.d:0 "在远离人烟的中国西北，一场旨在征讨民国旧日幽灵的血腥的战争仍在继续。\n\n一开始，帝国远征军很快征服了兰州，并击毙了匪首马步芳。帝国军队本以为这又是一场唾手可得的胜利，但当地人民的抵抗远远超出了日军的估计。在兰州城之外的广大荒原中，日军的巡逻队不断忍受着来自各种游击队的袭扰，又因为路途遥远，东京发来的补给不得不遭到了各种损耗，变得捉襟见肘。\n\n缺枪少弹的日军，对上意志坚定的中国游击队，这场发生在西北的冲突越来越像是上一场战争在二十年后的延续。但在最近的一次扫荡中，日军终于暂时击败了游击队的主力，辻政信立刻集结重兵，向着西宁进军。在这位疯狗将军看来，西宁之战，将成为这场血腥战争的转折点，帝国的又一场大胜触手可及。而马步芳之子——马继援已经重整了青海的残兵，在西宁构建了顽强的防线，抵御了日军的攻势，而就在日军止步于西宁脚下时，那些游击队又发动了大规模的袭击。在补给线被完全切断的风险面前，辻政信只得命令部队撤回兰州，在西宁城下，帝国军遭遇了屈辱的大败。"
  COX_news_event.2.a:0 "白日再度黯淡一分。"
  COX_news_event.3.t:0 "[Get_newspaper_header]始源的终末"
  COX_news_event.3.d:0 "今日凌晨五时，本应被黑暗笼罩的中国大陆忽然迸发出剧烈的光亮，这光芒盖过了东京湾升起的朝阳，令战壕中瑟瑟发抖的日军难以直视其光辉。正当日本科学家试图将其解释为陨石撞击，极光现象或中国的核武试验时，这异象唐突地消失了。随之一同消失的还有与日军在朝鲜前线对峙的百万大军。\n\n自中国共产党突然从新疆杀出，只过去了数月时间，中国军队就踏破了北京，攻入南京，将日本势力近乎驱逐出了大陆。在鸭绿江畔，本应继续进攻的他们却停下了步伐。接着，每个中国人脑中都听到了一个湘西人坚定的口音——“中华人民共和国，中央人民政府，今天，成立了！”\n\n全世界屏息凝神，静待着这个突然成立的“人民共和国”会对政治格局有何影响。但伴随着今日的强光，强大的红军全部消失了，与之一同消失的还有共产党部分领导层。没有人知道新生的共和国内发生了什么，也不清楚他们将如何面对这场危机。"
  COX_news_event.3.a:0 "他们的陨落就如崛起般迅速。"
  COX_news_event.4.t:0 "[Get_newspaper_header]是为永恒"
- COX_news_event.4.d:0 "在中国发生的一切奇怪的现象都因一个神秘的军阀宣布的惊人消息而截止：一支驻扎在中国新疆地区的沙漠上的共产党军队于今日郑重宣布：其不再承认中国对日本帝国的和平条约，并将联合中国地区的其他有意者重启针对日本帝国的任何战争手段。该军阀同样号召亚洲大陆上所有受日本压制的民族与他们协同进攻日本。换句话说，这场战争所针对的除了中国，还有东亚所有其他被日本控制的地区。\n在日本早已赢得了中日战争的当下，我们无法确定一个盘踞在荒漠上的军阀能有何作为。然而有消息报告称，自新疆地区出现的军队以不合常理的力量击碎了刚刚步往前线的蒙疆国军队，而该军阀新上台的控制者，正是先前传闻中，在中国人梦里出现的老人。结合之前发生的种种奇异的事情，我们只能这样猜测：" 
+ COX_news_event.4.d:0 "在中国发生的一切奇怪的现象都因一个神秘的军阀宣布的惊人消息而截止：一支驻扎在中国新疆地区的沙漠上的共产党军队于今日郑重宣布：其不再承认中国对日本帝国的和平条约，并将联合中国地区的其他有意者重启针对日本帝国的任何战争手段。该军阀同样号召亚洲大陆上所有受日本压制的民族与他们协同进攻日本。换句话说，这场战争所针对的除了中国，还有东亚所有其他被日本控制的地区。\n\n在日本早已赢得了中日战争的当下，我们无法确定一个盘踞在荒漠上的军阀能有何作为。然而有消息报告称，自新疆地区出现的军队以不合常理的力量击碎了刚刚步往前线的蒙疆国军队，而该军阀新上台的控制者，正是先前传闻中，在中国人梦里出现的老人。结合之前发生的种种奇异的事情，我们只能这样猜测：" 
  COX_news_event.4.a:0 "全东亚的命运将在某种存在的目光下走向黑暗，抑或是光明。"
  COX_news_event.5.t:0 "[Get_newspaper_header]惊雷前梦"
- COX_news_event.5.d:0 "先是中国南部连续一周不断的雷暴天气，又是日本驻中国西北地区的武装拓荒团神秘失踪。中国地区开始出现了越来越多匪夷所思的怪事。然而日本帝国政府却在此时宣布“日本与日本在中国地区的盟友皆未发现任何异常。”\n然而同样有流言称，中国地区的大部分人在睡梦中不一而同地见到了一位长着痣的慈祥老者。尽管这种流言的真实性几乎为零，但该流言确实遍布于中国的几乎所有地区。因此，这引起了全球范围内奇幻爱好者的讨论。"
+ COX_news_event.5.d:0 "先是中国南部连续一周不断的雷暴天气，又是日本驻中国西北地区的武装拓荒团神秘失踪。中国地区开始出现了越来越多匪夷所思的怪事。然而日本帝国政府却在此时宣布“日本与日本在中国地区的盟友皆未发现任何异常。”\n\n然而同样有流言称，中国地区的大部分人在睡梦中不一而同地见到了一位长着痣的慈祥老者。尽管这种流言的真实性几乎为零，但该流言确实遍布于中国的几乎所有地区。因此，这引起了全球范围内奇幻爱好者的讨论。"
  COX_news_event.5.a:0 "有什么东西要来了？"
 
 
