--- a/localisation/simp_chinese/TNO_Mengjiang_l_simp_chinese.yml
+++ b/localisation/simp_chinese/TNO_Mengjiang_l_simp_chinese.yml
@@ -9,8 +9,8 @@
  MEN_paternalism_DEF:0 "蒙疆联合自治政府"
  MEN_despotism:0 "蒙疆联合自治政府"
  MEN_despotism_DEF:0 "蒙疆联合自治政府"
- MEN_communist:0 "蒙古人民共和国"
- MEN_communist_DEF:0 "蒙古人民共和国"
+ MEA_communist:0 "蒙古人民共和国"
+ MEA_communist_DEF:0 "蒙古人民共和国"
  MEN_socialist:0 "蒙疆联合自治政府"
  MEN_socialist_DEF:0 "蒙疆联合自治政府"
  MEN_national_socialism:0 "蒙疆联合自治政府"
@@ -21,7 +21,7 @@
  MEN_liberalism_ADJ:0 "蒙古"
  MEN_conservatism_ADJ:0 "蒙古"
  MEN_paternalism_ADJ:0 "蒙古"
- MEN_communist_ADJ:0 "蒙古"
+ MEA_communist_ADJ:0 "蒙古"
  MEN_despotism_ADJ:0 "蒙古"
  MEN_socialist_ADJ:0 "蒙古"
  MEN_ultranationalism_ADJ:0 "蒙古"
@@ -198,3 +198,5 @@
  MEN_paternalism_party:0 "内蒙古人民革命党“喀喇沁派”"
  MEN_socialist_party:0 "内蒙古人民革命党“达斡尔派”"
  MEN_communist_party:0 "蒙古人民阵线"
+ MEA_socialist_party:0 "内蒙古人民革命党“达斡尔派”"
+ MEA_communist_party:0 "蒙古人民阵线"
